--- a/News-Articles/GG.Bet-Whirlwind-of-Football-Bonuses/index.html
+++ b/News-Articles/GG.Bet-Whirlwind-of-Football-Bonuses/index.html
@@ -61,6 +61,78 @@
         ]
       }
     </script>
+
+    <!-- JSON-LD for GG.Bet Whirlwind of Football Bonuses -->
+    <script type="application/ld+json">
+      {
+        "@context": "https://schema.org",
+        "@type": "Promotion",
+        "name": "GG.Bet Whirlwind of Football Bonuses",
+        "description": "Experience the football season like never before with GG.Bet's 'Whirlwind of Football Bonuses'. Enjoy deposit bonuses and free bets across four exciting periods from November 11 to December 8, 2024.",
+        "url": "https://www.all4wins.com/News-Articles/GG.Bet-Whirlwind-of-Football-Bonuses/",
+        "image": "https://www.all4wins.com/img/news-banners/GGbet-wirlwind-bonuses.webp",
+        "startDate": "2024-11-11",
+        "endDate": "2024-12-08",
+        "offers": [
+          {
+            "@type": "Offer",
+            "url": "https://www.all4wins.com/News-Articles/GG.Bet-Whirlwind-of-Football-Bonuses/",
+            "price": "0",
+            "priceCurrency": "USD",
+            "eligibleRegion": "Worldwide",
+            "availability": "https://schema.org/SoldOut",
+            "validFrom": "2024-11-11",
+            "validThrough": "2024-11-17"
+          },
+          {
+            "@type": "Offer",
+            "url": "https://www.all4wins.com/News-Articles/GG.Bet-Whirlwind-of-Football-Bonuses/",
+            "price": "0",
+            "priceCurrency": "USD",
+            "eligibleRegion": "Worldwide",
+            "availability": "https://schema.org/SoldOut",
+            "validFrom": "2024-11-18",
+            "validThrough": "2024-11-24"
+          },
+          {
+            "@type": "Offer",
+            "url": "https://www.all4wins.com/News-Articles/GG.Bet-Whirlwind-of-Football-Bonuses/",
+            "price": "0",
+            "priceCurrency": "USD",
+            "eligibleRegion": "Worldwide",
+            "availability": "https://schema.org/SoldOut",
+            "validFrom": "2024-11-25",
+            "validThrough": "2024-12-01"
+          },
+          {
+            "@type": "Offer",
+            "url": "https://www.all4wins.com/News-Articles/GG.Bet-Whirlwind-of-Football-Bonuses/",
+            "price": "0",
+            "priceCurrency": "USD",
+            "eligibleRegion": "Worldwide",
+            "availability": "https://schema.org/SoldOut",
+            "validFrom": "2024-12-02",
+            "validThrough": "2024-12-08"
+          }
+        ],
+        "publisher": {
+          "@type": "Organization",
+          "@id": "https://www.all4wins.com/#organization",
+          "name": "All4Wins",
+          "logo": {
+            "@type": "ImageObject",
+            "url": "https://www.all4wins.com/img/All4Wins-new-logo.webp",
+            "width": 200,
+            "height": 200
+          }
+        },
+        "author": {
+          "@type": "Person",
+          "name": "Andrei"
+        }
+      }
+    </script>
+    <!-- End JSON-LD for GG.Bet Whirlwind of Football Bonuses -->
   </head>
   <body>
     <div id="news-background"></div>
