--- a/News-Articles/GG.Bet-Winback-On-Dota2-Bets/index.html
+++ b/News-Articles/GG.Bet-Winback-On-Dota2-Bets/index.html
@@ -61,6 +61,58 @@
         ]
       }
     </script>
+
+    <!-- JSON-LD for GG.Bet Winback on Dota 2 Bets -->
+    <script type="application/ld+json">
+      {
+        "@context": "https://schema.org",
+        "@type": "Promotion",
+        "name": "GG.Bet Winback on Dota 2 Bets",
+        "description": "Choose your bonus for the DreamLeague Season 24 Dota 2 tournament: 10% winback up to $250 or a $50 freebet. Promotion runs from October 25 to November 10, 2024.",
+        "url": "https://www.all4wins.com/News-Articles/GG.Bet-Winback-On-Dota2-Bets/",
+        "image": "https://www.all4wins.com/img/news-banners/ggbet-dota-banner.webp",
+        "startDate": "2024-10-25",
+        "endDate": "2024-11-10",
+        "offers": [
+          {
+            "@type": "Offer",
+            "url": "https://www.all4wins.com/News-Articles/GG.Bet-Winback-On-Dota2-Bets/",
+            "price": "0",
+            "priceCurrency": "USD",
+            "eligibleRegion": "Worldwide",
+            "availability": "https://schema.org/SoldOut",
+            "validFrom": "2024-10-25",
+            "validThrough": "2024-11-10"
+          },
+          {
+            "@type": "Offer",
+            "url": "https://www.all4wins.com/News-Articles/GG.Bet-Winback-On-Dota2-Bets/",
+            "price": "0",
+            "priceCurrency": "USD",
+            "eligibleRegion": "Worldwide",
+            "availability": "https://schema.org/SoldOut",
+            "validFrom": "2024-10-25",
+            "validThrough": "2024-11-10"
+          }
+        ],
+        "publisher": {
+          "@type": "Organization",
+          "@id": "https://www.all4wins.com/#organization",
+          "name": "All4Wins",
+          "logo": {
+            "@type": "ImageObject",
+            "url": "https://www.all4wins.com/img/All4Wins-new-logo.webp",
+            "width": 200,
+            "height": 200
+          }
+        },
+        "author": {
+          "@type": "Person",
+          "name": "Andrei"
+        }
+      }
+    </script>
+    <!-- End JSON-LD for GG.Bet Winback on Dota 2 Bets -->
   </head>
   <body>
     <div id="news-background"></div>
