--- a/News-Articles/GGBET_NBA_Freebet_Promo–Up_to_150Euro_in_Free_Bets/index.html
+++ b/News-Articles/GGBET_NBA_Freebet_Promo–Up_to_150Euro_in_Free_Bets/index.html
@@ -58,6 +58,46 @@
         ]
       }
     </script>
+
+    <!-- JSON-LD for GG.Bet NBA Freebet Promo – Up to €150 in Free Bets -->
+    <script type="application/ld+json">
+      {
+        "@context": "https://schema.org",
+        "@type": "Promotion",
+        "name": "GG.Bet NBA Freebet Promo – Up to €150 in Free Bets",
+        "description": "Celebrate the NBA Finals with GG.Bet's exclusive promotion! Deposit and place bets on NBA matches to earn up to €150 in free bets. The promotion runs from May 1 to June 30, 2025.",
+        "url": "https://www.all4wins.com/News-Articles/GGBET_NBA_Freebet_Promo%E2%80%93Up_to_150Euro_in_Free_Bets/",
+        "image": "https://www.all4wins.com/img/news-banners/ggbet-basketball-finals-2025-banner.webp",
+        "startDate": "2025-05-01",
+        "endDate": "2025-06-30",
+        "offers": {
+          "@type": "Offer",
+          "url": "https://www.all4wins.com/News-Articles/GGBET_NBA_Freebet_Promo%E2%80%93Up_to_150Euro_in_Free_Bets/",
+          "price": "0",
+          "priceCurrency": "EUR",
+          "eligibleRegion": "Worldwide",
+          "availability": "https://schema.org/SoldOut",
+          "validFrom": "2025-05-01",
+          "validThrough": "2025-06-30"
+        },
+        "publisher": {
+          "@type": "Organization",
+          "@id": "https://www.all4wins.com/#organization",
+          "name": "All4Wins",
+          "logo": {
+            "@type": "ImageObject",
+            "url": "https://www.all4wins.com/img/All4Wins-new-logo.webp",
+            "width": 200,
+            "height": 200
+          }
+        },
+        "author": {
+          "@type": "Person",
+          "name": "Andrei"
+        }
+      }
+    </script>
+    <!-- End JSON-LD for GG.Bet NBA Freebet Promo – Up to €150 in Free Bets -->
   </head>
   <body>
     <div id="news-background"></div>
