--- a/News-Articles/GGBet-Winter-football-bonuses/index.html
+++ b/News-Articles/GGBet-Winter-football-bonuses/index.html
@@ -58,6 +58,68 @@
         ]
       }
     </script>
+
+    <!-- JSON-LD for GG.Bet Winter Football Bonuses -->
+    <script type="application/ld+json">
+      {
+        "@context": "https://schema.org",
+        "@type": "Promotion",
+        "name": "GG.Bet Winter Football Bonuses",
+        "description": "Celebrate the winter season with GG.Bet's exclusive football bonuses. Enjoy betting bonuses, freebets, and bet insurance across three exciting periods in December 2024.",
+        "url": "https://www.all4wins.com/News-Articles/GGBet-Winter-football-bonuses/",
+        "image": "https://www.all4wins.com/img/news-banners/ggbet-winter-football-bonuses.webp",
+        "startDate": "2024-12-10",
+        "endDate": "2024-12-31",
+        "offers": [
+          {
+            "@type": "Offer",
+            "url": "https://www.all4wins.com/News-Articles/GGBet-Winter-football-bonuses/",
+            "price": "0",
+            "priceCurrency": "USD",
+            "eligibleRegion": "Worldwide",
+            "availability": "https://schema.org/SoldOut",
+            "validFrom": "2024-12-10",
+            "validThrough": "2024-12-17"
+          },
+          {
+            "@type": "Offer",
+            "url": "https://www.all4wins.com/News-Articles/GGBet-Winter-football-bonuses/",
+            "price": "0",
+            "priceCurrency": "USD",
+            "eligibleRegion": "Worldwide",
+            "availability": "https://schema.org/SoldOut",
+            "validFrom": "2024-12-18",
+            "validThrough": "2024-12-23"
+          },
+          {
+            "@type": "Offer",
+            "url": "https://www.all4wins.com/News-Articles/GGBet-Winter-football-bonuses/",
+            "price": "0",
+            "priceCurrency": "USD",
+            "eligibleRegion": "Worldwide",
+            "availability": "https://schema.org/SoldOut",
+            "validFrom": "2024-12-24",
+            "validThrough": "2024-12-31"
+          }
+        ],
+        "publisher": {
+          "@type": "Organization",
+          "@id": "https://www.all4wins.com/#organization",
+          "name": "All4Wins",
+          "logo": {
+            "@type": "ImageObject",
+            "url": "https://www.all4wins.com/img/All4Wins-new-logo.webp",
+            "width": 200,
+            "height": 200
+          }
+        },
+        "author": {
+          "@type": "Person",
+          "name": "Andrei"
+        }
+      }
+    </script>
+    <!-- End JSON-LD for GG.Bet Winter Football Bonuses -->
   </head>
   <body>
     <div id="news-background"></div>
