--- a/News-Articles/Roobet-Chelsea-FC/index.html
+++ b/News-Articles/Roobet-Chelsea-FC/index.html
@@ -57,6 +57,46 @@
         ]
       }
     </script>
+
+    <!-- JSON-LD for Roobet & Chelsea FC Promotion -->
+    <script type="application/ld+json">
+      {
+        "@context": "https://schema.org",
+        "@type": "Promotion",
+        "name": "Roobet & Chelsea FC Double Your Winnings",
+        "description": "To celebrate the official partnership with Chelsea FC, bet on Chelsea to win and have your winnings doubled up to $100 (credited as a Free Bet). Valid on pre-match, single bets until February 28, 2025.",
+        "url": "https://www.all4wins.com/News-Articles/Roobet-Chelsea-FC/",
+        "image": "https://www.all4wins.com/img/news-banners/roobet-Chelsea-FC.webp",
+        "startDate": "2025-02-01",
+        "endDate": "2025-02-28",
+        "offers": {
+          "@type": "Offer",
+          "url": "https://www.all4wins.com/News-Articles/Roobet-Chelsea-FC/",
+          "price": "0",
+          "priceCurrency": "USD",
+          "eligibleRegion": "Worldwide",
+          "availability": "https://schema.org/SoldOut",
+          "validFrom": "2025-02-01",
+          "validThrough": "2025-02-28"
+        },
+        "publisher": {
+          "@type": "Organization",
+          "@id": "https://www.all4wins.com/#organization",
+          "name": "All4Wins",
+          "logo": {
+            "@type": "ImageObject",
+            "url": "https://www.all4wins.com/img/All4Wins-new-logo.webp",
+            "width": 200,
+            "height": 200
+          }
+        },
+        "author": {
+          "@type": "Person",
+          "name": "Andrei"
+        }
+      }
+    </script>
+    <!-- End JSON-LD for Roobet & Chelsea FC Promotion -->
   </head>
   <body>
     <div id="news-background"></div>
