--- a/News-Articles/GG.Bet-PGL-Wallachia-Season-2/index.html
+++ b/News-Articles/GG.Bet-PGL-Wallachia-Season-2/index.html
@@ -58,6 +58,46 @@
         ]
       }
     </script>
+
+    <!-- JSON-LD for GG.Bet PGL Wallachia Season 2 Deposit Bonus -->
+    <script type="application/ld+json">
+      {
+        "@context": "https://schema.org",
+        "@type": "Promotion",
+        "name": "GG.Bet PGL Wallachia Season 2 Deposit Bonus",
+        "description": "Boost your Dota 2 betting experience during PGL Wallachia Season 2 with exclusive deposit bonuses. Enjoy up to 200% bonus on your deposit from October 4 to October 13, 2024.",
+        "url": "https://www.all4wins.com/News-Articles/GG.Bet-PGL-Wallachia-Season-2/",
+        "image": "https://www.all4wins.com/img/news-banners/gg.bet.dota2.webp",
+        "startDate": "2024-10-04",
+        "endDate": "2024-10-13",
+        "offers": {
+          "@type": "Offer",
+          "url": "https://www.all4wins.com/News-Articles/GG.Bet-PGL-Wallachia-Season-2/",
+          "price": "0",
+          "priceCurrency": "USD",
+          "eligibleRegion": "Worldwide",
+          "availability": "https://schema.org/SoldOut",
+          "validFrom": "2024-10-04",
+          "validThrough": "2024-10-13"
+        },
+        "publisher": {
+          "@type": "Organization",
+          "@id": "https://www.all4wins.com/#organization",
+          "name": "All4Wins",
+          "logo": {
+            "@type": "ImageObject",
+            "url": "https://www.all4wins.com/img/All4Wins-new-logo.webp",
+            "width": 200,
+            "height": 200
+          }
+        },
+        "author": {
+          "@type": "Person",
+          "name": "Andrei"
+        }
+      }
+    </script>
+    <!-- End JSON-LD for GG.Bet PGL Wallachia Season 2 Deposit Bonus -->
   </head>
   <body>
     <div id="news-background"></div>
