--- a/News-Articles/GG.Bet-Runic-freebets-on-League-of-Legends/index.html
+++ b/News-Articles/GG.Bet-Runic-freebets-on-League-of-Legends/index.html
@@ -61,6 +61,46 @@
         ]
       }
     </script>
+
+    <!-- JSON-LD for GG.Bet Runic Freebets on League of Legends -->
+    <script type="application/ld+json">
+      {
+        "@context": "https://schema.org",
+        "@type": "Promotion",
+        "name": "GG.Bet Runic Freebets on League of Legends",
+        "description": "Enhance your League of Legends World Championship experience with GG.Bet's Runic Freebets. Enjoy up to four freebet bonuses during the championship from September 25 to October 31, 2024.",
+        "url": "https://www.all4wins.com/News-Articles/GG.Bet-Runic-freebets-on-League-of-Legends/",
+        "image": "https://www.all4wins.com/img/news-banners/gg.bet-lol-news-article.webp",
+        "startDate": "2024-09-25",
+        "endDate": "2024-10-31",
+        "offers": {
+          "@type": "Offer",
+          "url": "https://www.all4wins.com/News-Articles/GG.Bet-Runic-freebets-on-League-of-Legends/",
+          "price": "0",
+          "priceCurrency": "USD",
+          "eligibleRegion": "Worldwide",
+          "availability": "https://schema.org/SoldOut",
+          "validFrom": "2024-09-25",
+          "validThrough": "2024-10-31"
+        },
+        "publisher": {
+          "@type": "Organization",
+          "@id": "https://www.all4wins.com/#organization",
+          "name": "All4Wins",
+          "logo": {
+            "@type": "ImageObject",
+            "url": "https://www.all4wins.com/img/All4Wins-new-logo.webp",
+            "width": 200,
+            "height": 200
+          }
+        },
+        "author": {
+          "@type": "Person",
+          "name": "Andrei"
+        }
+      }
+    </script>
+    <!-- End JSON-LD for GG.Bet Runic Freebets on League of Legends -->
   </head>
   <body>
     <div id="news-background"></div>
