--- a/News-Articles/GG.Bet-Start-NHL-Season/index.html
+++ b/News-Articles/GG.Bet-Start-NHL-Season/index.html
@@ -58,6 +58,46 @@
         ]
       }
     </script>
+
+    <!-- JSON-LD for GG.Bet Start NHL Season Triple Bonus Promotion -->
+    <script type="application/ld+json">
+      {
+        "@context": "https://schema.org",
+        "@type": "Promotion",
+        "name": "GG.Bet Start NHL Season Triple Bonus Promotion",
+        "description": "Celebrate the start of the NHL season with GG.Bet's Triple Bonus Promotion! Enjoy up to three deposit bonuses from September 30 to October 28, 2024.",
+        "url": "https://www.all4wins.com/News-Articles/GG.Bet-Start-NHL-Season/",
+        "image": "https://www.all4wins.com/img/news-banners/gg.bet.hokey.webp",
+        "startDate": "2024-09-30",
+        "endDate": "2024-10-28",
+        "offers": {
+          "@type": "Offer",
+          "url": "https://www.all4wins.com/News-Articles/GG.Bet-Start-NHL-Season/",
+          "price": "0",
+          "priceCurrency": "USD",
+          "eligibleRegion": "Worldwide",
+          "availability": "https://schema.org/SoldOut",
+          "validFrom": "2024-09-30",
+          "validThrough": "2024-10-28"
+        },
+        "publisher": {
+          "@type": "Organization",
+          "@id": "https://www.all4wins.com/#organization",
+          "name": "All4Wins",
+          "logo": {
+            "@type": "ImageObject",
+            "url": "https://www.all4wins.com/img/All4Wins-new-logo.webp",
+            "width": 200,
+            "height": 200
+          }
+        },
+        "author": {
+          "@type": "Person",
+          "name": "Andrei"
+        }
+      }
+    </script>
+    <!-- End JSON-LD for GG.Bet Start NHL Season Triple Bonus Promotion -->
   </head>
   <body>
     <div id="news-background"></div>
