--- a/News-Articles/GG.Bet-Unleash-Hextech-Power-Bet-More-Win-More-Freebets/index.html
+++ b/News-Articles/GG.Bet-Unleash-Hextech-Power-Bet-More-Win-More-Freebets/index.html
@@ -58,6 +58,46 @@
         ]
       }
     </script>
+
+    <!-- JSON-LD for GG.Bet Unleash Hextech Power: Bet More, Win More Freebets -->
+    <script type="application/ld+json">
+      {
+        "@context": "https://schema.org",
+        "@type": "Promotion",
+        "name": "GG.Bet Unleash Hextech Power: Bet More, Win More Freebets",
+        "description": "Unleash the power of Hextech with GG.Bet's exclusive promotion! Bet on League of Legends matches to earn freebets up to $250. The more you wager, the higher your rewards. Promotion runs from February 5 to March 1, 2025.",
+        "url": "https://www.all4wins.com/News-Articles/GG.Bet-Unleash-Hextech-Power-Bet-More-Win-More-Freebets/",
+        "image": "https://www.all4wins.com/img/news-banners/ggbet-2025-lol-freebet.webp",
+        "startDate": "2025-02-05",
+        "endDate": "2025-03-01",
+        "offers": {
+          "@type": "Offer",
+          "url": "https://www.all4wins.com/News-Articles/GG.Bet-Unleash-Hextech-Power-Bet-More-Win-More-Freebets/",
+          "price": "0",
+          "priceCurrency": "USD",
+          "eligibleRegion": "Worldwide",
+          "availability": "https://schema.org/SoldOut",
+          "validFrom": "2025-02-05",
+          "validThrough": "2025-03-01"
+        },
+        "publisher": {
+          "@type": "Organization",
+          "@id": "https://www.all4wins.com/#organization",
+          "name": "All4Wins",
+          "logo": {
+            "@type": "ImageObject",
+            "url": "https://www.all4wins.com/img/All4Wins-new-logo.webp",
+            "width": 200,
+            "height": 200
+          }
+        },
+        "author": {
+          "@type": "Person",
+          "name": "Andrei"
+        }
+      }
+    </script>
+    <!-- End JSON-LD for GG.Bet Unleash Hextech Power: Bet More, Win More Freebets -->
   </head>
   <body>
     <div id="news-background"></div>
