--- a/News-Articles/GGBET-Freebet-for-everyone-in-VCT-EMEA/index.html
+++ b/News-Articles/GGBET-Freebet-for-everyone-in-VCT-EMEA/index.html
@@ -60,6 +60,46 @@
         ]
       }
     </script>
+
+    <!-- JSON-LD for GG.Bet Freebet for Everyone in VCT EMEA -->
+    <script type="application/ld+json">
+      {
+        "@context": "https://schema.org",
+        "@type": "Promotion",
+        "name": "GG.Bet Freebet for Everyone in VCT EMEA",
+        "description": "Activate GG.Bet's 'NICE SHOT, SMART BET' promotion during the VCT EMEA tournament. Enjoy freebets for every deposit made between January 10 and February 7, 2025. Deposit amounts and corresponding freebet values vary by period.",
+        "url": "https://www.all4wins.com/News-Articles/GGBET-Freebet-for-everyone-in-VCT-EMEA/",
+        "image": "https://www.all4wins.com/img/news-banners/ggBet-nice-shot.webp",
+        "startDate": "2025-01-10",
+        "endDate": "2025-02-07",
+        "offers": {
+          "@type": "Offer",
+          "url": "https://www.all4wins.com/News-Articles/GGBET-Freebet-for-everyone-in-VCT-EMEA/",
+          "price": "0",
+          "priceCurrency": "USD",
+          "eligibleRegion": "Worldwide",
+          "availability": "https://schema.org/SoldOut",
+          "validFrom": "2025-01-10",
+          "validThrough": "2025-02-07"
+        },
+        "publisher": {
+          "@type": "Organization",
+          "@id": "https://www.all4wins.com/#organization",
+          "name": "All4Wins",
+          "logo": {
+            "@type": "ImageObject",
+            "url": "https://www.all4wins.com/img/All4Wins-new-logo.webp",
+            "width": 200,
+            "height": 200
+          }
+        },
+        "author": {
+          "@type": "Person",
+          "name": "Andrei"
+        }
+      }
+    </script>
+    <!-- End JSON-LD for GG.Bet Freebet for Everyone in VCT EMEA -->
   </head>
   <body>
     <div id="news-background"></div>
