--- a/News-Articles/GGBET-Weekly-Promo-65-Free-Spins/index.html
+++ b/News-Articles/GGBET-Weekly-Promo-65-Free-Spins/index.html
@@ -59,6 +59,46 @@
         ]
       }
     </script>
+
+    <!-- JSON-LD for GG.Bet Weekly Promo: 150% Deposit Bonus + 65 Free Spins -->
+    <script type="application/ld+json">
+      {
+        "@context": "https://schema.org",
+        "@type": "Promotion",
+        "name": "GG.Bet Weekly Promo: 150% Deposit Bonus + 65 Free Spins",
+        "description": "Enhance your gaming experience with GG.Bet's weekly promotion offering up to a 150% deposit bonus and 65 free spins. Available every week from Tuesday to Thursday, this deal ensures you get the most out of your deposits.",
+        "url": "https://www.all4wins.com/News-Articles/GGBET-Weekly-Promo-65-Free-Spins/",
+        "image": "https://www.all4wins.com/img/news-banners/ggbet-weekly-fs.webp",
+        "startDate": "2025-08-26",
+        "endDate": "2025-08-28",
+        "offers": {
+          "@type": "Offer",
+          "url": "https://www.all4wins.com/News-Articles/GGBET-Weekly-Promo-65-Free-Spins/",
+          "price": "0",
+          "priceCurrency": "USD",
+          "eligibleRegion": "Worldwide",
+          "availability": "https://schema.org/InStock",
+          "validFrom": "2025-08-26",
+          "validThrough": "2025-08-28"
+        },
+        "publisher": {
+          "@type": "Organization",
+          "@id": "https://www.all4wins.com/#organization",
+          "name": "All4Wins",
+          "logo": {
+            "@type": "ImageObject",
+            "url": "https://www.all4wins.com/img/All4Wins-new-logo.webp",
+            "width": 200,
+            "height": 200
+          }
+        },
+        "author": {
+          "@type": "Person",
+          "name": "Andrei"
+        }
+      }
+    </script>
+    <!-- End JSON-LD for GG.Bet Weekly Promo: 150% Deposit Bonus + 65 Free Spins -->
   </head>
   <body>
     <div id="news-background"></div>
