--- a/News-Articles/GGBet-Bonus-Chest-Promo/index.html
+++ b/News-Articles/GGBet-Bonus-Chest-Promo/index.html
@@ -60,6 +60,46 @@
         ]
       }
     </script>
+
+    <!-- JSON-LD for GG.Bet Bonus Chest Promo -->
+    <script type="application/ld+json">
+      {
+        "@context": "https://schema.org",
+        "@type": "Promotion",
+        "name": "GG.Bet Bonus Chest Promo",
+        "description": "Unlock exclusive rewards with GG.Bet's Bonus Chest Promo. Place qualifying bets to earn free chests containing cash bonuses, free bets, deposit boosts, and more.",
+        "url": "https://www.all4wins.com/News-Articles/GGBet-Bonus-Chest-Promo/",
+        "image": "https://www.all4wins.com/img/news-banners/ggbet-bonus-cest.webp",
+        "startDate": "2025-07-01",
+        "endDate": "2026-07-01",
+        "offers": {
+          "@type": "Offer",
+          "url": "https://www.all4wins.com/News-Articles/GGBet-Bonus-Chest-Promo/",
+          "price": "0",
+          "priceCurrency": "USD",
+          "eligibleRegion": "Worldwide",
+          "availability": "https://schema.org/InStock",
+          "validFrom": "2025-07-01",
+          "validThrough": "2026-07-01"
+        },
+        "publisher": {
+          "@type": "Organization",
+          "@id": "https://www.all4wins.com/#organization",
+          "name": "All4Wins",
+          "logo": {
+            "@type": "ImageObject",
+            "url": "https://www.all4wins.com/img/All4Wins-new-logo.webp",
+            "width": 200,
+            "height": 200
+          }
+        },
+        "author": {
+          "@type": "Person",
+          "name": "Andrei"
+        }
+      }
+    </script>
+    <!-- End JSON-LD for GG.Bet Bonus Chest Promo -->
   </head>
   <body>
     <div id="news-background"></div>
