--- a/News-Articles/GGBet-Cashback-dota2/index.html
+++ b/News-Articles/GGBet-Cashback-dota2/index.html
@@ -60,6 +60,45 @@
         ]
       }
     </script>
+    <!-- JSON-LD for GG.Bet Magic Cashback Dota 2 Promotion -->
+    <script type="application/ld+json">
+      {
+        "@context": "https://schema.org",
+        "@type": "Promotion",
+        "name": "GG.Bet Magic Cashback Dota 2 Promotion",
+        "description": "Earn up to 15% cashback on your net losses when betting on Dota 2 matches during the ESL One Qualifiers. Activate your bonus in the Promotions section and place qualifying bets to qualify for cashback.",
+        "url": "https://www.all4wins.com/News-Articles/GGBet-Cashback-dota2/",
+        "image": "https://www.all4wins.com/img/news-banners/ggbet-cashback-banner.webp",
+        "startDate": "2024-10-14",
+        "endDate": "2024-10-23",
+        "offers": {
+          "@type": "Offer",
+          "url": "https://www.all4wins.com/News-Articles/GGBet-Cashback-dota2/",
+          "price": "0",
+          "priceCurrency": "USD",
+          "eligibleRegion": "Worldwide",
+          "availability": "https://schema.org/SoldOut",
+          "validFrom": "2024-10-14",
+          "validThrough": "2024-10-23"
+        },
+        "publisher": {
+          "@type": "Organization",
+          "@id": "https://www.all4wins.com/#organization",
+          "name": "All4Wins",
+          "logo": {
+            "@type": "ImageObject",
+            "url": "https://www.all4wins.com/img/All4Wins-new-logo.webp",
+            "width": 200,
+            "height": 200
+          }
+        },
+        "author": {
+          "@type": "Person",
+          "name": "Andrei"
+        }
+      }
+    </script>
+    <!-- End JSON-LD for GG.Bet Magic Cashback Dota 2 Promotion -->
   </head>
   <body>
     <div id="news-background"></div>
