--- a/News-Articles/GGBet-Freebet-on-football/index.html
+++ b/News-Articles/GGBet-Freebet-on-football/index.html
@@ -61,6 +61,46 @@
         ]
       }
     </script>
+
+    <!-- JSON-LD for GG.Bet Freebet on Football -->
+    <script type="application/ld+json">
+      {
+        "@context": "https://schema.org",
+        "@type": "Promotion",
+        "name": "GG.Bet Freebet on Football",
+        "description": "Activate GG.Bet's 'Freebets are already on the pitch' promotion during the specified periods. Enjoy freebets for every deposit made between March 3 and March 19, 2025. Deposit amounts and corresponding freebet values vary by period.",
+        "url": "https://www.all4wins.com/News-Articles/GGBET-Freebet-on-football/",
+        "image": "https://www.all4wins.com/img/news-banners/GGBet-soccer-freebets.webp",
+        "startDate": "2025-03-03",
+        "endDate": "2025-03-19",
+        "offers": {
+          "@type": "Offer",
+          "url": "https://www.all4wins.com/News-Articles/GGBET-Freebet-on-football/",
+          "price": "0",
+          "priceCurrency": "USD",
+          "eligibleRegion": "Worldwide",
+          "availability": "https://schema.org/SoldOut",
+          "validFrom": "2025-03-03",
+          "validThrough": "2025-03-19"
+        },
+        "publisher": {
+          "@type": "Organization",
+          "@id": "https://www.all4wins.com/#organization",
+          "name": "All4Wins",
+          "logo": {
+            "@type": "ImageObject",
+            "url": "https://www.all4wins.com/img/All4Wins-new-logo.webp",
+            "width": 200,
+            "height": 200
+          }
+        },
+        "author": {
+          "@type": "Person",
+          "name": "Andrei"
+        }
+      }
+    </script>
+    <!-- End JSON-LD for GG.Bet Freebet on Football -->
   </head>
   <body>
     <div id="news-background"></div>
