--- a/News-Articles/GGBet-Freebets-in-natural-habitat/index.html
+++ b/News-Articles/GGBet-Freebets-in-natural-habitat/index.html
@@ -58,6 +58,46 @@
         ]
       }
     </script>
+
+    <!-- JSON-LD for GG.Bet Freebets in Natural Habitat -->
+    <script type="application/ld+json">
+      {
+        "@context": "https://schema.org",
+        "@type": "Promotion",
+        "name": "GG.Bet Freebets in Natural Habitat",
+        "description": "Activate GG.Bet's 'Freebets in Natural Habitat' promotion during the specified periods. Enjoy freebets for every deposit made between January 2 and January 26, 2025. Deposit amounts and corresponding freebet values vary by period.",
+        "url": "https://www.all4wins.com/News-Articles/GGBet-Freebets-in-natural-habitat/",
+        "image": "https://www.all4wins.com/img/news-banners/ggbet-tenis-freebets.webp",
+        "startDate": "2025-01-02",
+        "endDate": "2025-01-26",
+        "offers": {
+          "@type": "Offer",
+          "url": "https://www.all4wins.com/News-Articles/GGBet-Freebets-in-natural-habitat/",
+          "price": "0",
+          "priceCurrency": "USD",
+          "eligibleRegion": "Worldwide",
+          "availability": "https://schema.org/SoldOut",
+          "validFrom": "2025-01-02",
+          "validThrough": "2025-01-26"
+        },
+        "publisher": {
+          "@type": "Organization",
+          "@id": "https://www.all4wins.com/#organization",
+          "name": "All4Wins",
+          "logo": {
+            "@type": "ImageObject",
+            "url": "https://www.all4wins.com/img/All4Wins-new-logo.webp",
+            "width": 200,
+            "height": 200
+          }
+        },
+        "author": {
+          "@type": "Person",
+          "name": "Andrei"
+        }
+      }
+    </script>
+    <!-- End JSON-LD for GG.Bet Freebets in Natural Habitat -->
   </head>
   <body>
     <div id="news-background"></div>
