--- a/News-Articles/GGBet-Incredible-tennis-cashback/index.html
+++ b/News-Articles/GGBet-Incredible-tennis-cashback/index.html
@@ -58,6 +58,46 @@
         ]
       }
     </script>
+
+    <!-- JSON-LD for GG.Bet Incredible Tennis Cashback -->
+    <script type="application/ld+json">
+      {
+        "@context": "https://schema.org",
+        "@type": "Promotion",
+        "name": "GG.Bet Incredible Tennis Cashback",
+        "description": "Activate GG.Bet's 'Incredible Tennis Cashback' promotion during the Nitto ATP Finals. Enjoy cashback on losses with varying percentages based on your deposit amount.",
+        "url": "https://www.all4wins.com/News-Articles/GGBet-Incredible-tennis-cashback/",
+        "image": "https://www.all4wins.com/img/news-banners/GGBet-tenis-cashback.webp",
+        "startDate": "2024-11-08",
+        "endDate": "2024-11-17",
+        "offers": {
+          "@type": "Offer",
+          "url": "https://www.all4wins.com/News-Articles/GGBet-Incredible-tennis-cashback/",
+          "price": "0",
+          "priceCurrency": "USD",
+          "eligibleRegion": "Worldwide",
+          "availability": "https://schema.org/SoldOut",
+          "validFrom": "2024-11-08",
+          "validThrough": "2024-11-17"
+        },
+        "publisher": {
+          "@type": "Organization",
+          "@id": "https://www.all4wins.com/#organization",
+          "name": "All4Wins",
+          "logo": {
+            "@type": "ImageObject",
+            "url": "https://www.all4wins.com/img/All4Wins-new-logo.webp",
+            "width": 200,
+            "height": 200
+          }
+        },
+        "author": {
+          "@type": "Person",
+          "name": "Andrei"
+        }
+      }
+    </script>
+    <!-- End JSON-LD for GG.Bet Incredible Tennis Cashback -->
   </head>
   <body>
     <div id="news-background"></div>
