--- a/News-Articles/GGBet-League-Of-Legends-200-Bonus/index.html
+++ b/News-Articles/GGBet-League-Of-Legends-200-Bonus/index.html
@@ -61,6 +61,46 @@
         ]
       }
     </script>
+
+    <!-- JSON-LD for GG.Bet League of Legends $200 Bonus -->
+    <script type="application/ld+json">
+      {
+        "@context": "https://schema.org",
+        "@type": "Promotion",
+        "name": "GG.Bet League of Legends $200 Bonus",
+        "description": "Bet on League of Legends matches during the specified periods and earn up to $200 in bonus funds. Wager $100 or more to receive a $50 bonus, or $500 or more to receive a $200 bonus. Apply the bonus to your account and place qualifying single bets with odds of 1.75 or higher.",
+        "url": "https://www.all4wins.com/News-Articles/GGBet-League-Of-Legends-200-Bonus/",
+        "image": "https://www.all4wins.com/img/news-banners/ggbet-lol-may-banner.webp",
+        "startDate": "2025-05-02",
+        "endDate": "2025-06-01",
+        "offers": {
+          "@type": "Offer",
+          "url": "https://www.all4wins.com/News-Articles/GGBet-League-Of-Legends-200-Bonus/",
+          "price": "0",
+          "priceCurrency": "USD",
+          "eligibleRegion": "Worldwide",
+          "availability": "https://schema.org/SoldOut",
+          "validFrom": "2025-05-02",
+          "validThrough": "2025-06-01"
+        },
+        "publisher": {
+          "@type": "Organization",
+          "@id": "https://www.all4wins.com/#organization",
+          "name": "All4Wins",
+          "logo": {
+            "@type": "ImageObject",
+            "url": "https://www.all4wins.com/img/All4Wins-new-logo.webp",
+            "width": 200,
+            "height": 200
+          }
+        },
+        "author": {
+          "@type": "Person",
+          "name": "Andrei"
+        }
+      }
+    </script>
+    <!-- End JSON-LD for GG.Bet League of Legends $200 Bonus -->
   </head>
   <body>
     <div id="news-background"></div>
