--- a/News-Articles/GGBet-Legendary-Cashback-on-League-of-Legends/index.html
+++ b/News-Articles/GGBet-Legendary-Cashback-on-League-of-Legends/index.html
@@ -58,6 +58,46 @@
         ]
       }
     </script>
+
+    <!-- JSON-LD for GG.Bet Legendary Cashback on League of Legends -->
+    <script type="application/ld+json">
+      {
+        "@context": "https://schema.org",
+        "@type": "Promotion",
+        "name": "GG.Bet Legendary Cashback on League of Legends",
+        "description": "Participate in GG.Bet's Legendary Cashback promotion during the specified periods. Enjoy cashback on losses with varying percentages based on your deposit amount.",
+        "url": "https://www.all4wins.com/News-Articles/GGBet-Legendary-Cashback-on-League-of-Legends/",
+        "image": "https://www.all4wins.com/img/news-banners/GGBet-legendary-cashback.webp",
+        "startDate": "2025-01-02",
+        "endDate": "2025-02-01",
+        "offers": {
+          "@type": "Offer",
+          "url": "https://www.all4wins.com/News-Articles/GGBet-Legendary-Cashback-on-League-of-Legends/",
+          "price": "0",
+          "priceCurrency": "USD",
+          "eligibleRegion": "Worldwide",
+          "availability": "https://schema.org/SoldOut",
+          "validFrom": "2025-01-02",
+          "validThrough": "2025-02-01"
+        },
+        "publisher": {
+          "@type": "Organization",
+          "@id": "https://www.all4wins.com/#organization",
+          "name": "All4Wins",
+          "logo": {
+            "@type": "ImageObject",
+            "url": "https://www.all4wins.com/img/All4Wins-new-logo.webp",
+            "width": 200,
+            "height": 200
+          }
+        },
+        "author": {
+          "@type": "Person",
+          "name": "Andrei"
+        }
+      }
+    </script>
+    <!-- End JSON-LD for GG.Bet Legendary Cashback on League of Legends -->
   </head>
   <body>
     <div id="news-background"></div>
