--- a/News-Articles/GGBet-Orange-Week-Promo/index.html
+++ b/News-Articles/GGBet-Orange-Week-Promo/index.html
@@ -57,6 +57,46 @@
         ]
       }
     </script>
+
+    <!-- JSON-LD for GG.Bet Orange Week Promo -->
+    <script type="application/ld+json">
+      {
+        "@context": "https://schema.org",
+        "@type": "Promotion",
+        "name": "GG.Bet Orange Week Promo",
+        "description": "Celebrate GG.Bet's Orange Week with exclusive freebet rewards. Deposit during the specified periods to earn freebets up to $200. Wagering requirements apply.",
+        "url": "https://www.all4wins.com/News-Articles/GGBet-Orange-Week-Promo/",
+        "image": "https://www.all4wins.com/img/news-banners/ggbet-orange-promo-banner.png",
+        "startDate": "2024-11-22",
+        "endDate": "2024-12-02",
+        "offers": {
+          "@type": "Offer",
+          "url": "https://www.all4wins.com/News-Articles/GGBet-Orange-Week-Promo/",
+          "price": "0",
+          "priceCurrency": "USD",
+          "eligibleRegion": "Worldwide",
+          "availability": "https://schema.org/SoldOut",
+          "validFrom": "2024-11-22",
+          "validThrough": "2024-12-02"
+        },
+        "publisher": {
+          "@type": "Organization",
+          "@id": "https://www.all4wins.com/#organization",
+          "name": "All4Wins",
+          "logo": {
+            "@type": "ImageObject",
+            "url": "https://www.all4wins.com/img/All4Wins-new-logo.webp",
+            "width": 200,
+            "height": 200
+          }
+        },
+        "author": {
+          "@type": "Person",
+          "name": "Andrei"
+        }
+      }
+    </script>
+    <!-- End JSON-LD for GG.Bet Orange Week Promo -->
   </head>
   <body>
     <div id="news-background"></div>
