--- a/News-Articles/Kickstart-2025-with-Roobet/index.html
+++ b/News-Articles/Kickstart-2025-with-Roobet/index.html
@@ -61,6 +61,47 @@
         ]
       }
     </script>
+    <!-- JSON-LD for Kickstart 2025 with Roobet -->
+    <script type="application/ld+json">
+      {
+        "@context": "https://schema.org",
+        "@type": "Promotion",
+        "name": "Kickstart 2025 with Roobet",
+        "description": "Celebrate the new year with Roobet's massive $1,000,000+ crypto gambling prizes. Enjoy weekly raffles, missions, tournaments, and more throughout January 2025.",
+        "url": "https://www.all4wins.com/News-Articles/Kickstart-2025-with-Roobet/",
+        "image": "https://www.all4wins.com/img/news-banners/Kickstart-2025-with-Roobet-banner.webp",
+        "startDate": "2024-12-30",
+        "endDate": "2025-02-03",
+        "offers": [
+          {
+            "@type": "Offer",
+            "url": "https://www.all4wins.com/News-Articles/Kickstart-2025-with-Roobet/",
+            "price": "0",
+            "priceCurrency": "USD",
+            "eligibleRegion": "Worldwide",
+            "availability": "https://schema.org/SoldOut",
+            "validFrom": "2024-12-30",
+            "validThrough": "2025-02-03"
+          }
+        ],
+        "publisher": {
+          "@type": "Organization",
+          "@id": "https://www.all4wins.com/#organization",
+          "name": "All4Wins",
+          "logo": {
+            "@type": "ImageObject",
+            "url": "https://www.all4wins.com/img/All4Wins-new-logo.webp",
+            "width": 200,
+            "height": 200
+          }
+        },
+        "author": {
+          "@type": "Person",
+          "name": "Andrei"
+        }
+      }
+    </script>
+    <!-- End JSON-LD for Kickstart 2025 with Roobet -->
   </head>
   <body>
     <div id="news-background"></div>
