--- a/News-Articles/New-gaming-provider-on-Thunderpick/index.html
+++ b/News-Articles/New-gaming-provider-on-Thunderpick/index.html
@@ -60,6 +60,48 @@
         ]
       }
     </script>
+
+    <!-- JSON-LD for Thunderpick New Gaming Provider -->
+    <script type="application/ld+json">
+      {
+        "@context": "https://schema.org",
+        "@type": "Promotion",
+        "name": "Thunderpick New Gaming Provider",
+        "description": "Thunderpick has partnered with Lucky, a new gaming provider, offering exciting games like Tiger’s Fortune, Farm Ville 2, and more. Players had the chance to win a €25 cash bonus by hitting a 100x multiplier in qualifying games between October 11 and October 24, 2024.",
+        "url": "https://www.all4wins.com/News-Articles/New-gaming-provider-on-Thunderpick/",
+        "image": "https://www.all4wins.com/img/news-banners/thunderpick-new-provider.webp",
+        "startDate": "2024-10-11",
+        "endDate": "2024-10-24",
+        "offers": [
+          {
+            "@type": "Offer",
+            "url": "https://www.all4wins.com/News-Articles/New-gaming-provider-on-Thunderpick/",
+            "price": "0",
+            "priceCurrency": "EUR",
+            "eligibleRegion": "Worldwide",
+            "availability": "https://schema.org/SoldOut",
+            "validFrom": "2024-10-11",
+            "validThrough": "2024-10-24"
+          }
+        ],
+        "publisher": {
+          "@type": "Organization",
+          "@id": "https://www.all4wins.com/#organization",
+          "name": "All4Wins",
+          "logo": {
+            "@type": "ImageObject",
+            "url": "https://www.all4wins.com/img/All4Wins-new-logo.webp",
+            "width": 200,
+            "height": 200
+          }
+        },
+        "author": {
+          "@type": "Person",
+          "name": "Andrei"
+        }
+      }
+    </script>
+    <!-- End JSON-LD for Thunderpick New Gaming Provider -->
   </head>
   <body>
     <div id="news-background"></div>
