--- a/News-Articles/Play_at_Roobet_with_Solana_(SOL)_Fast_Crypto_Casino/index.html
+++ b/News-Articles/Play_at_Roobet_with_Solana_(SOL)_Fast_Crypto_Casino/index.html
@@ -58,6 +58,46 @@
         ]
       }
     </script>
+
+    <!-- JSON-LD for Roobet Solana (SOL) Fast Crypto Casino -->
+    <script type="application/ld+json">
+      {
+        "@context": "https://schema.org",
+        "@type": "Promotion",
+        "name": "Roobet Solana (SOL) Fast Crypto Casino",
+        "description": "Roobet has introduced Solana (SOL) as a new deposit method, offering lightning-fast transactions with ultra-low fees. Players can now deposit SOL directly into their Roobet account for seamless gaming experiences.",
+        "url": "https://www.all4wins.com/News-Articles/Play_at_Roobet_with_Solana_(SOL)_Fast_Crypto_Casino/",
+        "image": "https://www.all4wins.com/img/news-banners/roobet-s-banner.webp",
+        "startDate": "2025-08-13",
+        "offers": [
+          {
+            "@type": "Offer",
+            "url": "https://www.all4wins.com/News-Articles/Play_at_Roobet_with_Solana_(SOL)_Fast_Crypto_Casino/",
+            "price": "0",
+            "priceCurrency": "USD",
+            "eligibleRegion": "Worldwide",
+            "availability": "https://schema.org/InStock",
+            "validFrom": "2025-08-13"
+          }
+        ],
+        "publisher": {
+          "@type": "Organization",
+          "@id": "https://www.all4wins.com/#organization",
+          "name": "All4Wins",
+          "logo": {
+            "@type": "ImageObject",
+            "url": "https://www.all4wins.com/img/All4Wins-new-logo.webp",
+            "width": 200,
+            "height": 200
+          }
+        },
+        "author": {
+          "@type": "Person",
+          "name": "Andrei"
+        }
+      }
+    </script>
+    <!-- End JSON-LD for Roobet Solana (SOL) Fast Crypto Casino -->
   </head>
   <body>
     <div id="news-background"></div>
