--- a/News-Articles/Plinko/index.html
+++ b/News-Articles/Plinko/index.html
@@ -61,6 +61,44 @@
         ]
       }
     </script>
+
+    <!-- JSON-LD Template for Ongoing Promotion (No End Date) -->
+    <script type="application/ld+json">
+      {
+        "@context": "https://schema.org",
+        "@type": "Promotion",
+        "name": "Promotion Name Here",
+        "description": "Brief description of the promotion, highlighting key details and offers for users.",
+        "url": "https://www.all4wins.com/News-Articles/Your-Promo-Page/",
+        "image": "https://www.all4wins.com/img/All4Wins-new-logo.webp",
+        "startDate": "2025-08-28",
+        "offers": {
+          "@type": "Offer",
+          "url": "https://www.all4wins.com/News-Articles/Your-Promo-Page/",
+          "price": "0",
+          "priceCurrency": "USD",
+          "eligibleRegion": "Worldwide",
+          "availability": "https://schema.org/InStock",
+          "validFrom": "2025-08-28"
+        },
+        "publisher": {
+          "@type": "Organization",
+          "@id": "https://www.all4wins.com/#organization",
+          "name": "All4Wins",
+          "logo": {
+            "@type": "ImageObject",
+            "url": "https://www.all4wins.com/img/All4Wins-new-logo.webp",
+            "width": 200,
+            "height": 200
+          }
+        },
+        "author": {
+          "@type": "Person",
+          "name": "Andrei"
+        }
+      }
+    </script>
+    <!-- End JSON-LD Template for Ongoing Promotion -->
   </head>
   <body>
     <div id="news-background"></div>
