--- a/News-Articles/Roobet-$100000-Weekly-Raffles/index.html
+++ b/News-Articles/Roobet-$100000-Weekly-Raffles/index.html
@@ -69,6 +69,46 @@
         ]
       }
     </script>
+
+    <!-- JSON-LD for Roobet $100,000 Weekly Raffles -->
+    <script type="application/ld+json">
+      {
+        "@context": "https://schema.org",
+        "@type": "Promotion",
+        "name": "Roobet $100,000 Weekly Raffles",
+        "description": "Participate in Roobet's weekly raffle for a chance to win a share of $100,000. Earn 1 ticket for every $250 wagered across all games on Roobet. Double your chances by playing the game of the week.",
+        "url": "https://www.all4wins.com/News-Articles/Roobet-$100000-Weekly-Raffles/",
+        "image": "https://www.all4wins.com/img/news-banners/weeklyRaffles-Roober-bannerMain.webp",
+        "startDate": "2024-08-25",
+        "endDate": "2024-09-01",
+        "offers": {
+          "@type": "Offer",
+          "url": "https://www.all4wins.com/News-Articles/Roobet-$100000-Weekly-Raffles/",
+          "price": "0",
+          "priceCurrency": "USD",
+          "eligibleRegion": "Worldwide",
+          "availability": "https://schema.org/SoldOut",
+          "validFrom": "2024-08-25",
+          "validThrough": "2024-09-01"
+        },
+        "publisher": {
+          "@type": "Organization",
+          "@id": "https://www.all4wins.com/#organization",
+          "name": "All4Wins",
+          "logo": {
+            "@type": "ImageObject",
+            "url": "https://www.all4wins.com/img/All4Wins-new-logo.webp",
+            "width": 200,
+            "height": 200
+          }
+        },
+        "author": {
+          "@type": "Person",
+          "name": "Andrei"
+        }
+      }
+    </script>
+    <!-- End JSON-LD for Roobet $100,000 Weekly Raffles -->
   </head>
   <body>
     <div id="news-background"></div>
@@ -318,7 +358,7 @@
           <h3>
             <strong
               >Power Level Weekend with Online Casino Games (September
-              13-15):</strong
+              13-15/2024):</strong
             >
           </h3>
 
