--- a/News-Articles/Roobet-1000000-in-prizes/index.html
+++ b/News-Articles/Roobet-1000000-in-prizes/index.html
@@ -62,6 +62,46 @@
         ]
       }
     </script>
+
+    <!-- JSON-LD for Roobet $1,000,000 in Prizes -->
+    <script type="application/ld+json">
+      {
+        "@context": "https://schema.org",
+        "@type": "Promotion",
+        "name": "Roobet $1,000,000 in Prizes",
+        "description": "Celebrate May with Roobet's biggest giveaway yet—$1,000,000 in prizes! Participate in slot tournaments, raffles, and exclusive events like Cinco de Mayo and Bitcoin Pizza Day promotions.",
+        "url": "https://www.all4wins.com/News-Articles/Roobet-1000000-in-prizes/",
+        "image": "https://www.all4wins.com/img/news-banners/roobet-may-banner.webp",
+        "startDate": "2025-05-01",
+        "endDate": "2025-05-31",
+        "offers": {
+          "@type": "Offer",
+          "url": "https://www.all4wins.com/News-Articles/Roobet-1000000-in-prizes/",
+          "price": "0",
+          "priceCurrency": "USD",
+          "eligibleRegion": "Worldwide",
+          "availability": "https://schema.org/SoldOut",
+          "validFrom": "2025-05-01",
+          "validThrough": "2025-05-31"
+        },
+        "publisher": {
+          "@type": "Organization",
+          "@id": "https://www.all4wins.com/#organization",
+          "name": "All4Wins",
+          "logo": {
+            "@type": "ImageObject",
+            "url": "https://www.all4wins.com/img/All4Wins-new-logo.webp",
+            "width": 200,
+            "height": 200
+          }
+        },
+        "author": {
+          "@type": "Person",
+          "name": "Andrei"
+        }
+      }
+    </script>
+    <!-- End JSON-LD for Roobet $1,000,000 in Prizes -->
   </head>
   <body>
     <div id="news-background"></div>
