--- a/News-Articles/Roobet-April-Sports-Betting-Promotions/index.html
+++ b/News-Articles/Roobet-April-Sports-Betting-Promotions/index.html
@@ -58,6 +58,46 @@
         ]
       }
     </script>
+
+    <!-- JSON-LD for Roobet April Sports Betting Promotions -->
+    <script type="application/ld+json">
+      {
+        "@context": "https://schema.org",
+        "@type": "Promotion",
+        "name": "Roobet April Sports Betting Promotions",
+        "description": "Boost your bankroll with Roobet's April sports betting promos! Enjoy cashback, free bets, and prize drops on NBA Playoffs, IPL cricket, and esports.",
+        "url": "https://www.all4wins.com/News-Articles/Roobet-April-Sports-Betting-Promotions/",
+        "image": "https://www.all4wins.com/img/news-banners/Roobet-April-Sports-Betting-Promotions-banner.webp",
+        "startDate": "2025-04-01",
+        "endDate": "2025-04-30",
+        "offers": {
+          "@type": "Offer",
+          "url": "https://www.all4wins.com/News-Articles/Roobet-April-Sports-Betting-Promotions/",
+          "price": "0",
+          "priceCurrency": "USD",
+          "eligibleRegion": "Worldwide",
+          "availability": "https://schema.org/SoldOut",
+          "validFrom": "2025-04-01",
+          "validThrough": "2025-04-30"
+        },
+        "publisher": {
+          "@type": "Organization",
+          "@id": "https://www.all4wins.com/#organization",
+          "name": "All4Wins",
+          "logo": {
+            "@type": "ImageObject",
+            "url": "https://www.all4wins.com/img/All4Wins-new-logo.webp",
+            "width": 200,
+            "height": 200
+          }
+        },
+        "author": {
+          "@type": "Person",
+          "name": "Andrei"
+        }
+      }
+    </script>
+    <!-- End JSON-LD for Roobet April Sports Betting Promotions -->
   </head>
   <body>
     <div id="news-background"></div>
