--- a/News-Articles/Roobet-Cup-2025-Win-With-Every-CS2-Bet/index.html
+++ b/News-Articles/Roobet-Cup-2025-Win-With-Every-CS2-Bet/index.html
@@ -58,6 +58,46 @@
         ]
       }
     </script>
+
+    <!-- JSON-LD for Roobet Cup 2025: Win with Every CS2 Bet -->
+    <script type="application/ld+json">
+      {
+        "@context": "https://schema.org",
+        "@type": "Promotion",
+        "name": "Roobet Cup 2025: Win a Share of $10,000 with Every CS2 Bet!",
+        "description": "The Roobet Cup 2025 CS2 promotion lets you earn raffle tickets for a chance to win in a $10,000 raffle by placing qualifying CS2 bets across major tournaments—and every ticket also enters the $100,000 Grand Raffle.",
+        "url": "https://www.all4wins.com/News-Articles/Roobet-Cup-2025-Win-With-Every-CS2-Bet/",
+        "image": "https://www.all4wins.com/img/news-banners/roobet-cs2-2025-banner.webp",
+        "startDate": "2025-05-19",
+        "endDate": "2025-10-13",
+        "offers": {
+          "@type": "Offer",
+          "url": "https://www.all4wins.com/News-Articles/Roobet-Cup-2025-Win-With-Every-CS2-Bet/",
+          "price": "0",
+          "priceCurrency": "USD",
+          "eligibleRegion": "Worldwide",
+          "availability": "https://schema.org/InStock",
+          "validFrom": "2025-05-19",
+          "validThrough": "2025-10-13"
+        },
+        "publisher": {
+          "@type": "Organization",
+          "@id": "https://www.all4wins.com/#organization",
+          "name": "All4Wins",
+          "logo": {
+            "@type": "ImageObject",
+            "url": "https://www.all4wins.com/img/All4Wins-new-logo.webp",
+            "width": 200,
+            "height": 200
+          }
+        },
+        "author": {
+          "@type": "Person",
+          "name": "Andrei"
+        }
+      }
+    </script>
+    <!-- End JSON-LD for Roobet Cup 2025: Win with Every CS2 Bet -->
   </head>
   <body>
     <div id="news-background"></div>
