--- a/News-Articles/Roobet-Exciting-Easter-Casino-Promotions/index.html
+++ b/News-Articles/Roobet-Exciting-Easter-Casino-Promotions/index.html
@@ -58,6 +58,46 @@
         ]
       }
     </script>
+
+    <!-- JSON-LD for Roobet’s Easter Casino Promotions -->
+    <script type="application/ld+json">
+      {
+        "@context": "https://schema.org",
+        "@type": "Promotion",
+        "name": "Roobet’s Exciting Easter Casino Promotions",
+        "description": "Celebrate the Easter season with Roobet’s April casino promotions—Easter Egg Hunt, Target Challenge, Prize Drops, Weekly Raffles, and High Multiplier Tournaments—distributing over $1,000,000 in prizes across April 2025.",
+        "url": "https://www.all4wins.com/News-Articles/Roobet-Exciting-Easter-Casino-Promotions/",
+        "image": "https://www.all4wins.com/img/news-banners/roobet-easter-banner.webp",
+        "startDate": "2025-04-14",
+        "endDate": "2025-04-30",
+        "offers": {
+          "@type": "Offer",
+          "url": "https://www.all4wins.com/News-Articles/Roobet-Exciting-Easter-Casino-Promotions/",
+          "price": "0",
+          "priceCurrency": "USD",
+          "eligibleRegion": "Worldwide",
+          "availability": "https://schema.org/SoldOut",
+          "validFrom": "2025-04-14",
+          "validThrough": "2025-04-30"
+        },
+        "publisher": {
+          "@type": "Organization",
+          "@id": "https://www.all4wins.com/#organization",
+          "name": "All4Wins",
+          "logo": {
+            "@type": "ImageObject",
+            "url": "https://www.all4wins.com/img/All4Wins-new-logo.webp",
+            "width": 200,
+            "height": 200
+          }
+        },
+        "author": {
+          "@type": "Person",
+          "name": "Andrei"
+        }
+      }
+    </script>
+    <!-- End JSON-LD for Roobet’s Easter Casino Promotions -->
   </head>
   <body>
     <div id="news-background"></div>
