--- a/News-Articles/Roobet-Exclusive-Mad-Muertos-is-Here/index.html
+++ b/News-Articles/Roobet-Exclusive-Mad-Muertos-is-Here/index.html
@@ -58,6 +58,34 @@
         ]
       }
     </script>
+
+    <!-- JSON-LD for Mad Muertos Slot (Exclusive to Roobet) -->
+    <script type="application/ld+json">
+      {
+        "@context": "https://schema.org",
+        "@type": "Game",
+        "name": "Mad Muertos",
+        "description": "Mad Muertos is an electrifying exclusive online slot from Pragmatic Play on Roobet. Featuring Día de los Muertos-inspired visuals, cascading reels, free spins, wild multipliers, and up to a 25,000× max win for a high-energy gaming experience.",
+        "url": "https://www.all4wins.com/News-Articles/Roobet-Exclusive-Mad-Muertos-is-Here/",
+        "image": "https://www.all4wins.com/img/news-banners/roobet-Mad-Muertos-banner.webp",
+        "publisher": {
+          "@type": "Organization",
+          "@id": "https://www.all4wins.com/#organization",
+          "name": "All4Wins",
+          "logo": {
+            "@type": "ImageObject",
+            "url": "https://www.all4wins.com/img/All4Wins-new-logo.webp",
+            "width": 200,
+            "height": 200
+          }
+        },
+        "author": {
+          "@type": "Person",
+          "name": "Andrei"
+        }
+      }
+    </script>
+    <!-- End JSON-LD for Mad Muertos Slot -->
   </head>
   <body>
     <div id="news-background"></div>
