--- a/News-Articles/Roobet-February-Feaver/index.html
+++ b/News-Articles/Roobet-February-Feaver/index.html
@@ -58,6 +58,46 @@
         ]
       }
     </script>
+
+    <!-- JSON-LD for Roobet February Fever: Love, Luck & Big Wins -->
+    <script type="application/ld+json">
+      {
+        "@context": "https://schema.org",
+        "@type": "Promotion",
+        "name": "February Fever: Love, Luck & Big Wins at Roobet",
+        "description": "Celebrate Valentine's month with Cupid’s Cash Drops, Daily Missions, Target Challenges, High-Multiplier Tournaments, and a $100,000 Valentine's Raffle across Roobet's casino in February 2025.",
+        "url": "https://www.all4wins.com/News-Articles/Roobet-February-Feaver/",
+        "image": "https://www.all4wins.com/img/news-banners/Roobet-February-Feve-news.webp",
+        "startDate": "2025-02-07",
+        "endDate": "2025-02-17",
+        "offers": {
+          "@type": "Offer",
+          "url": "https://www.all4wins.com/News-Articles/Roobet-February-Feaver/",
+          "price": "0",
+          "priceCurrency": "USD",
+          "eligibleRegion": "Worldwide",
+          "availability": "https://schema.org/SoldOut",
+          "validFrom": "2025-02-07",
+          "validThrough": "2025-02-17"
+        },
+        "publisher": {
+          "@type": "Organization",
+          "@id": "https://www.all4wins.com/#organization",
+          "name": "All4Wins",
+          "logo": {
+            "@type": "ImageObject",
+            "url": "https://www.all4wins.com/img/All4Wins-new-logo.webp",
+            "width": 200,
+            "height": 200
+          }
+        },
+        "author": {
+          "@type": "Person",
+          "name": "Andrei"
+        }
+      }
+    </script>
+    <!-- End JSON-LD for Roobet February Fever: Love, Luck & Big Wins -->
   </head>
   <body>
     <div id="news-background"></div>
