--- a/News-Articles/Roobet-GO-For-Gold/index.html
+++ b/News-Articles/Roobet-GO-For-Gold/index.html
@@ -58,6 +58,46 @@
         ]
       }
     </script>
+
+    <!-- JSON-LD for Roobet – Go for Gold Promotion -->
+    <script type="application/ld+json">
+      {
+        "@context": "https://schema.org",
+        "@type": "Promotion",
+        "name": "Roobet – Go for Gold",
+        "description": "Celebrate the Paris Summer Games with Roobet’s Go for Gold: earn raffle tickets all August long, join high-multiplier tournaments, daily cash drops, and specials to win from the $250,000 prize pool.",
+        "url": "https://www.all4wins.com/News-Articles/Roobet-GO-For-Gold/",
+        "image": "https://www.all4wins.com/img/news-banners/roobet-banner1.webp",
+        "startDate": "2024-08-01",
+        "endDate": "2024-08-31",
+        "offers": {
+          "@type": "Offer",
+          "url": "https://www.all4wins.com/News-Articles/Roobet-GO-For-Gold/",
+          "price": "0",
+          "priceCurrency": "USD",
+          "eligibleRegion": "Worldwide",
+          "availability": "https://schema.org/SoldOut",
+          "validFrom": "2024-08-01",
+          "validThrough": "2024-08-31"
+        },
+        "publisher": {
+          "@type": "Organization",
+          "@id": "https://www.all4wins.com/#organization",
+          "name": "All4Wins",
+          "logo": {
+            "@type": "ImageObject",
+            "url": "https://www.all4wins.com/img/All4Wins-new-logo.webp",
+            "width": 200,
+            "height": 200
+          }
+        },
+        "author": {
+          "@type": "Person",
+          "name": "Andrei"
+        }
+      }
+    </script>
+    <!-- End JSON-LD for Roobet – Go for Gold Promotion -->
   </head>
   <body>
     <div id="news-background"></div>
