--- a/News-Articles/Roobet-January-Sportsbook-Promotions/index.html
+++ b/News-Articles/Roobet-January-Sportsbook-Promotions/index.html
@@ -58,6 +58,46 @@
         ]
       }
     </script>
+
+    <!-- JSON-LD for Roobet’s January Sportsbook Promotions -->
+    <script type="application/ld+json">
+      {
+        "@context": "https://schema.org",
+        "@type": "Promotion",
+        "name": "Roobet’s January Sportsbook Promotions",
+        "description": "Ring in the new year with Roobet’s January sportsbook promotions—featuring profit boosts, free bets, and $100,000 weekly raffles tailored for sports betting.",
+        "url": "https://www.all4wins.com/News-Articles/Roobet-January-Sportsbook-Promotions/",
+        "image": "https://www.all4wins.com/img/news-banners/roobet-sportsbook-january.webp",
+        "startDate": "2025-01-01",
+        "endDate": "2025-01-31",
+        "offers": {
+          "@type": "Offer",
+          "url": "https://www.all4wins.com/News-Articles/Roobet-January-Sportsbook-Promotions/",
+          "price": "0",
+          "priceCurrency": "USD",
+          "eligibleRegion": "Worldwide",
+          "availability": "https://schema.org/SoldOut",
+          "validFrom": "2025-01-01",
+          "validThrough": "2025-01-31"
+        },
+        "publisher": {
+          "@type": "Organization",
+          "@id": "https://www.all4wins.com/#organization",
+          "name": "All4Wins",
+          "logo": {
+            "@type": "ImageObject",
+            "url": "https://www.all4wins.com/img/All4Wins-new-logo.webp",
+            "width": 200,
+            "height": 200
+          }
+        },
+        "author": {
+          "@type": "Person",
+          "name": "Andrei"
+        }
+      }
+    </script>
+    <!-- End JSON-LD for Roobet’s January Sportsbook Promotions -->
   </head>
   <body>
     <div id="news-background"></div>
