--- a/News-Articles/Roobet_August_Action/index.html
+++ b/News-Articles/Roobet_August_Action/index.html
@@ -59,6 +59,44 @@
         ]
       }
     </script>
+
+    <!-- JSON-LD for Roobet August Action Promotion -->
+    <script type="application/ld+json">
+      {
+        "@context": "https://schema.org",
+        "@type": "Promotion",
+        "name": "Roobet August Action",
+        "description": "Roobet Sportsbook offered exclusive promotions for August, including a $10,000 CS2 Raffle, UFC 319 Free Bet, Premier League Bore Draw Insurance, and First Goalscorer Insurance for La Liga, Serie A, and Bundesliga matches.",
+        "url": "https://www.all4wins.com/News-Articles/Roobet_August_Action/",
+        "image": "https://www.all4wins.com/img/news-banners/roobet-sports-august2025-banner.webp",
+        "endDate": "2025-08-24",
+        "offers": {
+          "@type": "Offer",
+          "url": "https://www.all4wins.com/News-Articles/Roobet_August_Action/",
+          "price": "0",
+          "priceCurrency": "USD",
+          "eligibleRegion": "Worldwide",
+          "availability": "https://schema.org/SoldOut",
+          "validThrough": "2025-08-24"
+        },
+        "publisher": {
+          "@type": "Organization",
+          "@id": "https://www.all4wins.com/#organization",
+          "name": "All4Wins",
+          "logo": {
+            "@type": "ImageObject",
+            "url": "https://www.all4wins.com/img/All4Wins-new-logo.webp",
+            "width": 200,
+            "height": 200
+          }
+        },
+        "author": {
+          "@type": "Person",
+          "name": "Andrei"
+        }
+      }
+    </script>
+    <!-- End JSON-LD for Roobet August Action Promotion -->
   </head>
   <body>
     <div id="news-background"></div>
