--- a/News-Articles/Roobet_Jun_Sportsbook_Bonanza/index.html
+++ b/News-Articles/Roobet_Jun_Sportsbook_Bonanza/index.html
@@ -59,6 +59,46 @@
         ]
       }
     </script>
+
+    <!-- JSON-LD for Roobet June Sportsbook Bonanza Promotion -->
+    <script type="application/ld+json">
+      {
+        "@context": "https://schema.org",
+        "@type": "Promotion",
+        "name": "Roobet June Sportsbook Bonanza",
+        "description": "Roobet's June Sportsbook Bonanza offers a variety of promotions across tennis, horse racing, esports, and more, including Parlay Power Play, Club World Cup Comeback, Royal Ascot Payback, Wimbledon 5-Set Safety Net, and Road to Roobet Cup.",
+        "url": "https://www.all4wins.com/News-Articles/Roobet_Jun_Sportsbook_Bonanza/",
+        "image": "https://www.all4wins.com/img/news-banners/Roobet_Jun_Sportsbook_Bonanza_banner.webp",
+        "startDate": "2025-06-01",
+        "endDate": "2025-06-30",
+        "offers": {
+          "@type": "Offer",
+          "url": "https://www.all4wins.com/News-Articles/Roobet_Jun_Sportsbook_Bonanza/",
+          "price": "0",
+          "priceCurrency": "USD",
+          "eligibleRegion": "Worldwide",
+          "availability": "https://schema.org/SoldOut",
+          "validFrom": "2025-06-01",
+          "validThrough": "2025-06-30"
+        },
+        "publisher": {
+          "@type": "Organization",
+          "@id": "https://www.all4wins.com/#organization",
+          "name": "All4Wins",
+          "logo": {
+            "@type": "ImageObject",
+            "url": "https://www.all4wins.com/img/All4Wins-new-logo.webp",
+            "width": 200,
+            "height": 200
+          }
+        },
+        "author": {
+          "@type": "Person",
+          "name": "Andrei"
+        }
+      }
+    </script>
+    <!-- End JSON-LD for Roobet June Sportsbook Bonanza Promotion -->
   </head>
   <body>
     <div id="news-background"></div>
