--- a/News-Articles/Roobet-March-Sportsbook-Promos/index.html
+++ b/News-Articles/Roobet-March-Sportsbook-Promos/index.html
@@ -58,6 +58,46 @@
         ]
       }
     </script>
+
+    <!-- JSON-LD for Roobet March Sportsbook Promotions -->
+    <script type="application/ld+json">
+      {
+        "@context": "https://schema.org",
+        "@type": "Promotion",
+        "name": "Roobet March Sportsbook Promotions",
+        "description": "March 2025 was packed with non-stop sports betting action at Roobet, featuring NCAA March Mayhem cashback, Cheltenham horse racing raffles, IPL cricket betting bonuses, and a 7-day cashback offer.",
+        "url": "https://www.all4wins.com/News-Articles/Roobet-March-Sportsbook-Promos/",
+        "image": "https://www.all4wins.com/img/news-banners/roobet-march-sports-banner.webp",
+        "startDate": "2025-03-01",
+        "endDate": "2025-03-31",
+        "offers": {
+          "@type": "Offer",
+          "url": "https://www.all4wins.com/News-Articles/Roobet-March-Sportsbook-Promos/",
+          "price": "0",
+          "priceCurrency": "USD",
+          "eligibleRegion": "Worldwide",
+          "availability": "https://schema.org/SoldOut",
+          "validFrom": "2025-03-01",
+          "validThrough": "2025-03-31"
+        },
+        "publisher": {
+          "@type": "Organization",
+          "@id": "https://www.all4wins.com/#organization",
+          "name": "All4Wins",
+          "logo": {
+            "@type": "ImageObject",
+            "url": "https://www.all4wins.com/img/All4Wins-new-logo.webp",
+            "width": 200,
+            "height": 200
+          }
+        },
+        "author": {
+          "@type": "Person",
+          "name": "Andrei"
+        }
+      }
+    </script>
+    <!-- End JSON-LD for Roobet March Sportsbook Promotions -->
   </head>
   <body>
     <div id="news-background"></div>
