--- a/News-Articles/Roobet-Knockout-November/index.html
+++ b/News-Articles/Roobet-Knockout-November/index.html
@@ -61,6 +61,46 @@
         ]
       }
     </script>
+
+    <!-- JSON-LD for Roobet’s Knockout November Promotion -->
+    <script type="application/ld+json">
+      {
+        "@context": "https://schema.org",
+        "@type": "Promotion",
+        "name": "Roobet’s Knockout November: From NYC UFC Showdowns to Big Wins!",
+        "description": "November 2024 was a knockout month on Roobet. Wager $50 to win UFC tickets and $10K, double your wins, join weekly $100K raffles, high-multiplier tournaments, prize drops every weekend, and celebrate Mission Uncrossable’s birthday with a $10K prize pool—over $500K in prizes total.",
+        "url": "https://www.all4wins.com/News-Articles/Roobet-Knockout-November/",
+        "image": "https://www.all4wins.com/img/news-banners/roobet-november-banner.webp",
+        "startDate": "2024-11-01",
+        "endDate": "2024-11-30",
+        "offers": {
+          "@type": "Offer",
+          "url": "https://www.all4wins.com/News-Articles/Roobet-Knockout-November/",
+          "price": "0",
+          "priceCurrency": "USD",
+          "eligibleRegion": "Worldwide",
+          "availability": "https://schema.org/SoldOut",
+          "validFrom": "2024-11-01",
+          "validThrough": "2024-11-30"
+        },
+        "publisher": {
+          "@type": "Organization",
+          "@id": "https://www.all4wins.com/#organization",
+          "name": "All4Wins",
+          "logo": {
+            "@type": "ImageObject",
+            "url": "https://www.all4wins.com/img/All4Wins-new-logo.webp",
+            "width": 200,
+            "height": 200
+          }
+        },
+        "author": {
+          "@type": "Person",
+          "name": "Andrei"
+        }
+      }
+    </script>
+    <!-- End JSON-LD for Roobet’s Knockout November Promotion -->
   </head>
   <body>
     <div id="news-background"></div>
