--- a/News-Articles/Roobet-Luck-Month-Kicks-Off/index.html
+++ b/News-Articles/Roobet-Luck-Month-Kicks-Off/index.html
@@ -60,6 +60,46 @@
         ]
       }
     </script>
+
+    <!-- JSON-LD for "Your Lucky Month Kicks Off With Over $600,000 in Casino Prizes!" -->
+    <script type="application/ld+json">
+      {
+        "@context": "https://schema.org",
+        "@type": "Promotion",
+        "name": "Your Lucky Month Kicks Off With Over $600,000 in Casino Prizes!",
+        "description": "A thrilling March at Roobet packed with prize drops, missions, raffles, challenges, and multi-tournaments—over $600,000 in casino prizes, including St. Patrick’s Week events and the March Mayhem Multi-Tourney.",
+        "url": "https://www.all4wins.com/News-Articles/Roobet-Luck-Month-Kicks-Off/",
+        "image": "https://www.all4wins.com/img/news-banners/roobet-apr-banner.webp",
+        "startDate": "2025-03-01",
+        "endDate": "2025-03-31",
+        "offers": {
+          "@type": "Offer",
+          "url": "https://www.all4wins.com/News-Articles/Roobet-Luck-Month-Kicks-Off/",
+          "price": "0",
+          "priceCurrency": "USD",
+          "eligibleRegion": "Worldwide",
+          "availability": "https://schema.org/SoldOut",
+          "validFrom": "2025-03-01",
+          "validThrough": "2025-03-31"
+        },
+        "publisher": {
+          "@type": "Organization",
+          "@id": "https://www.all4wins.com/#organization",
+          "name": "All4Wins",
+          "logo": {
+            "@type": "ImageObject",
+            "url": "https://www.all4wins.com/img/All4Wins-new-logo.webp",
+            "width": 200,
+            "height": 200
+          }
+        },
+        "author": {
+          "@type": "Person",
+          "name": "Andrei"
+        }
+      }
+    </script>
+    <!-- End JSON-LD for "Your Lucky Month Kicks Off With Over $600,000 in Casino Prizes!" -->
   </head>
   <body>
     <div id="news-background"></div>
