--- a/News-Articles/Roobet-Mission-Uncrossable/index.html
+++ b/News-Articles/Roobet-Mission-Uncrossable/index.html
@@ -60,6 +60,34 @@
         ]
       }
     </script>
+
+    <!-- JSON-LD for Mission Uncrossable Game -->
+    <script type="application/ld+json">
+      {
+        "@context": "https://schema.org",
+        "@type": "Game",
+        "name": "Mission Uncrossable",
+        "description": "Mission Uncrossable is an exclusive Roobet game inspired by Crossy Road. Guide your chicken across busy roads, collect multipliers, and aim for wins up to $1,000,000. Adjustable difficulty and bet sizes from $0.01 to $100 per round.",
+        "url": "https://www.all4wins.com/News-Articles/Roobet-Mission-Uncrossable/",
+        "image": "https://www.all4wins.com/img/news-banners/mission-unscrollable-topBanner.webp",
+        "publisher": {
+          "@type": "Organization",
+          "@id": "https://www.all4wins.com/#organization",
+          "name": "All4Wins",
+          "logo": {
+            "@type": "ImageObject",
+            "url": "https://www.all4wins.com/img/All4Wins-new-logo.webp",
+            "width": 200,
+            "height": 200
+          }
+        },
+        "author": {
+          "@type": "Person",
+          "name": "Andrei"
+        }
+      }
+    </script>
+    <!-- End JSON-LD for Mission Uncrossable Game -->
   </head>
   <body>
     <div id="news-background"></div>
