--- a/News-Articles/Roobet-Promo-Santa-$1000000-Sack/index.html
+++ b/News-Articles/Roobet-Promo-Santa-$1000000-Sack/index.html
@@ -59,6 +59,46 @@
         ]
       }
     </script>
+
+    <!-- JSON-LD for Santa’s $1,000,000 Sack Promotion -->
+    <script type="application/ld+json">
+      {
+        "@context": "https://schema.org",
+        "@type": "Promotion",
+        "name": "Santa’s $1,000,000 Sack",
+        "description": "Celebrate the festive season with Roobet's Santa’s $1,000,000 Sack promotion, featuring weekly raffles, daily challenges, and festive mini-games from December 1 to 30, 2024.",
+        "url": "https://www.all4wins.com/News-Articles/Roobet-Promo-Santa-$1000000-Sack/",
+        "image": "https://www.all4wins.com/img/news-banners/roobet-Santa-Sack-banner.webp",
+        "startDate": "2024-12-01",
+        "endDate": "2024-12-30",
+        "offers": {
+          "@type": "Offer",
+          "url": "https://www.all4wins.com/News-Articles/Roobet-Promo-Santa-$1000000-Sack/",
+          "price": "0",
+          "priceCurrency": "USD",
+          "eligibleRegion": "Worldwide",
+          "availability": "https://schema.org/SoldOut",
+          "validFrom": "2024-12-01",
+          "validThrough": "2024-12-30"
+        },
+        "publisher": {
+          "@type": "Organization",
+          "@id": "https://www.all4wins.com/#organization",
+          "name": "All4Wins",
+          "logo": {
+            "@type": "ImageObject",
+            "url": "https://www.all4wins.com/img/All4Wins-new-logo.webp",
+            "width": 200,
+            "height": 200
+          }
+        },
+        "author": {
+          "@type": "Person",
+          "name": "Andrei"
+        }
+      }
+    </script>
+    <!-- End JSON-LD for Santa’s $1,000,000 Sack Promotion -->
   </head>
   <body>
     <div id="news-background"></div>
