--- a/News-Articles/Roobet-Snoop-Dogg-Dollars/index.html
+++ b/News-Articles/Roobet-Snoop-Dogg-Dollars/index.html
@@ -58,6 +58,34 @@
         ]
       }
     </script>
+
+    <!-- JSON-LD for Snoop Dogg Dollars Game -->
+    <script type="application/ld+json">
+      {
+        "@context": "https://schema.org",
+        "@type": "Game",
+        "name": "Snoop Dogg Dollars",
+        "description": "Snoop Dogg Dollars is a high-volatility slot game available on Roobet, featuring sticky Wilds, a maximum multiplier of x10,000, and a 96.1% RTP. Enjoy immersive gameplay with Snoop Dogg’s signature style.",
+        "url": "https://www.all4wins.com/News-Articles/Roobet-Snoop-Dogg-Dollars/",
+        "image": "https://www.all4wins.com/img/news-banners/roobet-snoop-dogg-Dollars-banner.webp",
+        "publisher": {
+          "@type": "Organization",
+          "@id": "https://www.all4wins.com/#organization",
+          "name": "All4Wins",
+          "logo": {
+            "@type": "ImageObject",
+            "url": "https://www.all4wins.com/img/All4Wins-new-logo.webp",
+            "width": 200,
+            "height": 200
+          }
+        },
+        "author": {
+          "@type": "Person",
+          "name": "Andrei"
+        }
+      }
+    </script>
+    <!-- End JSON-LD for Snoop Dogg Dollars Game -->
   </head>
   <body>
     <div id="news-background"></div>
