--- a/News-Articles/Roobet-UFC-309/index.html
+++ b/News-Articles/Roobet-UFC-309/index.html
@@ -59,6 +59,46 @@
         ]
       }
     </script>
+
+    <!-- JSON-LD for Roobet UFC 309 Promotion -->
+    <script type="application/ld+json">
+      {
+        "@context": "https://schema.org",
+        "@type": "Promotion",
+        "name": "Roobet UFC 309",
+        "description": "Experience the excitement of UFC 309 with Roobet's exclusive promotion. Place a $50+ wager on Roobet’s Sportsbook from November 1–10, 2024, and earn entries to win tickets to UFC 309 at Madison Square Garden, plus a $10,000 cash prize. Additionally, bet on Charles 'Do Bronx' Oliveira to win and Roobet will double your winnings up to $100.",
+        "url": "https://www.all4wins.com/News-Articles/Roobet-UFC-309/",
+        "image": "https://www.all4wins.com/img/news-banners/roobet-ufc309-banner.gif",
+        "startDate": "2024-11-01",
+        "endDate": "2024-11-10",
+        "offers": {
+          "@type": "Offer",
+          "url": "https://www.all4wins.com/News-Articles/Roobet-UFC-309/",
+          "price": "0",
+          "priceCurrency": "USD",
+          "eligibleRegion": "Worldwide",
+          "availability": "https://schema.org/SoldOut",
+          "validFrom": "2024-11-01",
+          "validThrough": "2024-11-10"
+        },
+        "publisher": {
+          "@type": "Organization",
+          "@id": "https://www.all4wins.com/#organization",
+          "name": "All4Wins",
+          "logo": {
+            "@type": "ImageObject",
+            "url": "https://www.all4wins.com/img/All4Wins-new-logo.webp",
+            "width": 200,
+            "height": 200
+          }
+        },
+        "author": {
+          "@type": "Person",
+          "name": "Andrei"
+        }
+      }
+    </script>
+    <!-- End JSON-LD for Roobet UFC 309 Promotion -->
   </head>
   <body>
     <div id="news-background"></div>
