--- a/News-Articles/Roobet-Weekly-Raffles-and-Tournament/index.html
+++ b/News-Articles/Roobet-Weekly-Raffles-and-Tournament/index.html
@@ -62,6 +62,46 @@
         ]
       }
     </script>
+
+    <!-- JSON-LD for Roobet Weekly Raffles and Tournament -->
+    <script type="application/ld+json">
+      {
+        "@context": "https://schema.org",
+        "@type": "Promotion",
+        "name": "Roobet Weekly Raffles and Tournament",
+        "description": "Roobet's October casino promotions offer over $500,000 in prizes through Weekly Raffles, High Multiplier Tournaments, and Weekend Cash Drops. Win big this Halloween season!",
+        "url": "https://www.all4wins.com/News-Articles/Roobet-Weekly-Raffles-and-Tournament/",
+        "image": "https://www.all4wins.com/img/news-banners/roobet-tournament.webp",
+        "startDate": "2024-10-01",
+        "endDate": "2024-10-31",
+        "offers": {
+          "@type": "Offer",
+          "url": "https://www.all4wins.com/News-Articles/Roobet-Weekly-Raffles-and-Tournament/",
+          "price": "0",
+          "priceCurrency": "USD",
+          "eligibleRegion": "Worldwide",
+          "availability": "https://schema.org/SoldOut",
+          "validFrom": "2024-10-01",
+          "validThrough": "2024-10-31"
+        },
+        "publisher": {
+          "@type": "Organization",
+          "@id": "https://www.all4wins.com/#organization",
+          "name": "All4Wins",
+          "logo": {
+            "@type": "ImageObject",
+            "url": "https://www.all4wins.com/img/All4Wins-new-logo.webp",
+            "width": 200,
+            "height": 200
+          }
+        },
+        "author": {
+          "@type": "Person",
+          "name": "Andrei"
+        }
+      }
+    </script>
+    <!-- End JSON-LD for Roobet Weekly Raffles and Tournament -->
   </head>
   <body>
     <div id="news-background"></div>
