--- a/News-Articles/Roobet’s-Latest-Sportsbook-Promos/index.html
+++ b/News-Articles/Roobet’s-Latest-Sportsbook-Promos/index.html
@@ -59,6 +59,46 @@
         ]
       }
     </script>
+
+    <!-- JSON-LD for Roobet’s Latest Sportsbook Promotions -->
+    <script type="application/ld+json">
+      {
+        "@context": "https://schema.org",
+        "@type": "Promotion",
+        "name": "Roobet’s Latest Sportsbook Promotions",
+        "description": "Explore Roobet's exclusive sportsbook promotions, including cashback offers, free bets, and prize pools for various sports events.",
+        "url": "https://www.all4wins.com/News-Articles/Roobet%E2%80%99s-Latest-Sportsbook-Promos/",
+        "image": "https://www.all4wins.com/img/news-banners/roobet-sports-promo-banner.webp",
+        "startDate": "2025-01-01",
+        "endDate": "2025-08-27",
+        "offers": {
+          "@type": "Offer",
+          "url": "https://www.all4wins.com/News-Articles/Roobet%E2%80%99s-Latest-Sportsbook-Promos/",
+          "price": "0",
+          "priceCurrency": "USD",
+          "eligibleRegion": "Worldwide",
+          "availability": "https://schema.org/SoldOut",
+          "validFrom": "2025-01-01",
+          "validThrough": "2025-08-27"
+        },
+        "publisher": {
+          "@type": "Organization",
+          "@id": "https://www.all4wins.com/#organization",
+          "name": "All4Wins",
+          "logo": {
+            "@type": "ImageObject",
+            "url": "https://www.all4wins.com/img/All4Wins-new-logo.webp",
+            "width": 200,
+            "height": 200
+          }
+        },
+        "author": {
+          "@type": "Person",
+          "name": "Andrei"
+        }
+      }
+    </script>
+    <!-- End JSON-LD for Roobet’s Latest Sportsbook Promotions -->
   </head>
   <body>
     <div id="news-background"></div>
