--- a/News-Articles/Snoop's-Hot-Box-Game/index.html
+++ b/News-Articles/Snoop's-Hot-Box-Game/index.html
@@ -60,6 +60,34 @@
         ]
       }
     </script>
+
+    <!-- JSON-LD for Snoop's Hot Box Game -->
+    <script type="application/ld+json">
+      {
+        "@context": "https://schema.org",
+        "@type": "Game",
+        "name": "Snoop's Hot Box",
+        "description": "Snoop's Hot Box is a crash-style game developed exclusively for Roobet in collaboration with Snoop Dogg. Players place bets and watch as a multiplier increases, aiming to cash out before it crashes. The game features vibrant graphics, Snoop Dogg-themed elements, and sound effects, offering a unique gaming experience.",
+        "url": "https://www.all4wins.com/News-Articles/Snoop's-Hot-Box-Game/",
+        "image": "https://www.all4wins.com/img/news-banners/hotbox-long-banner.webp",
+        "publisher": {
+          "@type": "Organization",
+          "@id": "https://www.all4wins.com/#organization",
+          "name": "All4Wins",
+          "logo": {
+            "@type": "ImageObject",
+            "url": "https://www.all4wins.com/img/All4Wins-new-logo.webp",
+            "width": 200,
+            "height": 200
+          }
+        },
+        "author": {
+          "@type": "Person",
+          "name": "Andrei"
+        }
+      }
+    </script>
+    <!-- End JSON-LD for Snoop's Hot Box Game -->
   </head>
   <body>
     <div id="news-background"></div>
