--- a/News-Articles/Snoop’s Highrollers/index.html
+++ b/News-Articles/Snoop’s Highrollers/index.html
@@ -54,11 +54,40 @@
             "@type": "ListItem",
             "position": 3,
             "name": "Snoops Highrollers",
-            "item": "https://www.all4wins.com/News-Articles/Snoop's Highrollers/"
+            "item": "https://www.all4wins.com/News-Articles/Snoop%E2%80%99s%20Highrollers/"
           }
         ]
       }
     </script>
+
+    <!-- JSON-LD for Snoop’s Highrollers Game -->
+<script type="application/ld+json">
+{
+  "@context": "https://schema.org",
+  "@type": "Game",
+  "name": "Snoop’s Highrollers",
+  "description": "Snoop’s Highrollers is an exclusive slot game developed in collaboration with Snoop Dogg and Gaming Corps, featuring 576 ways to win, a maximum payout of 10,000x your bet, free spins, and High Rollers bonus features. Enjoy immersive gameplay with Snoop Dogg’s signature style.",
+  "url": "https://www.all4wins.com/News-Articles/Snoop%E2%80%99s%20Highrollers/",
+  "image": "https://www.all4wins.com/img/news-banners/roobet-banner4.webp",
+  "publisher": {
+    "@type": "Organization",
+    "@id": "https://www.all4wins.com/#organization",
+    "name": "All4Wins",
+    "logo": {
+      "@type": "ImageObject",
+      "url": "https://www.all4wins.com/img/All4Wins-new-logo.webp",
+      "width": 200,
+      "height": 200
+    }
+  },
+  "author": {
+    "@type": "Person",
+    "name": "Andrei"
+  }
+}
+</script>
+<!-- End JSON-LD for Snoop’s Highrollers Game -->
+ 
   </head>
   <body>
     <div id="news-background"></div>
