--- a/News-Articles/Thunderpick-1st-map-insurance/index.html
+++ b/News-Articles/Thunderpick-1st-map-insurance/index.html
@@ -61,6 +61,46 @@
         ]
       }
     </script>
+
+    <!-- JSON-LD for Thunderpick 1st Map Insurance Promotion -->
+    <script type="application/ld+json">
+      {
+        "@context": "https://schema.org",
+        "@type": "Promotion",
+        "name": "Thunderpick 1st Map Insurance",
+        "description": "Place a single pre-match bet on the match winner market of selected esports tournaments. If your chosen team wins the first map but loses the match, you can claim a refund of up to €50.",
+        "url": "https://www.all4wins.com/News-Articles/Thunderpick-1st-map-insurance/",
+        "image": "https://www.all4wins.com/img/news-banners/thunderpick-map-banner.webp",
+        "startDate": "2024-10-17",
+        "endDate": "2024-11-02",
+        "offers": {
+          "@type": "Offer",
+          "url": "https://www.all4wins.com/News-Articles/Thunderpick-1st-map-insurance/",
+          "price": "0",
+          "priceCurrency": "EUR",
+          "eligibleRegion": "Worldwide",
+          "availability": "https://schema.org/SoldOut",
+          "validFrom": "2024-10-17",
+          "validThrough": "2024-11-02"
+        },
+        "publisher": {
+          "@type": "Organization",
+          "@id": "https://www.all4wins.com/#organization",
+          "name": "All4Wins",
+          "logo": {
+            "@type": "ImageObject",
+            "url": "https://www.all4wins.com/img/All4Wins-new-logo.webp",
+            "width": 200,
+            "height": 200
+          }
+        },
+        "author": {
+          "@type": "Person",
+          "name": "Andrei"
+        }
+      }
+    </script>
+    <!-- End JSON-LD for Thunderpick 1st Map Insurance Promotion -->
   </head>
   <body>
     <div id="news-background"></div>
