--- a/News-Articles/Thunderpick-200-Free-Spins-Promo/index.html
+++ b/News-Articles/Thunderpick-200-Free-Spins-Promo/index.html
@@ -60,6 +60,46 @@
         ]
       }
     </script>
+
+    <!-- JSON-LD for Thunderpick 200 Free Spins Promo -->
+    <script type="application/ld+json">
+      {
+        "@context": "https://schema.org",
+        "@type": "Promotion",
+        "name": "Thunderpick 200 Free Spins Promo",
+        "description": "Place qualifying bets on Thunderpick's World Championship 2024 to earn up to 200 Free Spins. Bet on at least two match days before the Grand Final to claim 100 Free Spins, and bet €20 or more on the Grand Final to claim another 100 Free Spins.",
+        "url": "https://www.all4wins.com/News-Articles/Thunderpick-200-Free-Spins-Promo/",
+        "image": "https://www.all4wins.com/img/news-banners/thunderpick-200-FS.webp",
+        "startDate": "2024-10-21",
+        "endDate": "2024-11-03",
+        "offers": {
+          "@type": "Offer",
+          "url": "https://www.all4wins.com/News-Articles/Thunderpick-200-Free-Spins-Promo/",
+          "price": "0",
+          "priceCurrency": "EUR",
+          "eligibleRegion": "Worldwide",
+          "availability": "https://schema.org/SoldOut",
+          "validFrom": "2024-10-21",
+          "validThrough": "2024-11-03"
+        },
+        "publisher": {
+          "@type": "Organization",
+          "@id": "https://www.all4wins.com/#organization",
+          "name": "All4Wins",
+          "logo": {
+            "@type": "ImageObject",
+            "url": "https://www.all4wins.com/img/All4Wins-new-logo.webp",
+            "width": 200,
+            "height": 200
+          }
+        },
+        "author": {
+          "@type": "Person",
+          "name": "Andrei"
+        }
+      }
+    </script>
+    <!-- End JSON-LD for Thunderpick 200 Free Spins Promo -->
   </head>
   <body>
     <div id="news-background"></div>
