--- a/News-Articles/Thunderpick-CS2-Skin-Giveaway/index.html
+++ b/News-Articles/Thunderpick-CS2-Skin-Giveaway/index.html
@@ -58,6 +58,46 @@
         ]
       }
     </script>
+
+    <!-- JSON-LD for Thunderpick CS2 Skin Giveaway -->
+    <script type="application/ld+json">
+      {
+        "@context": "https://schema.org",
+        "@type": "Promotion",
+        "name": "Thunderpick CS2 Skin Giveaway",
+        "description": "Place qualifying bets during the Thunderpick World Championship 2024 to win CS2 skins worth up to €5,000. Bet at least €75 during each qualifier and the Main Event to be eligible for the grand prize.",
+        "url": "https://www.all4wins.com/News-Articles/Thunderpick-CS2-Skin-Giveaway/",
+        "image": "https://www.all4wins.com/img/news-banners/thunderpick-csskins.webp",
+        "startDate": "2024-04-01",
+        "endDate": "2024-10-24",
+        "offers": {
+          "@type": "Offer",
+          "url": "https://www.all4wins.com/News-Articles/Thunderpick-CS2-Skin-Giveaway/",
+          "price": "0",
+          "priceCurrency": "EUR",
+          "eligibleRegion": "Worldwide",
+          "availability": "https://schema.org/SoldOut",
+          "validFrom": "2024-04-01",
+          "validThrough": "2024-10-24"
+        },
+        "publisher": {
+          "@type": "Organization",
+          "@id": "https://www.all4wins.com/#organization",
+          "name": "All4Wins",
+          "logo": {
+            "@type": "ImageObject",
+            "url": "https://www.all4wins.com/img/All4Wins-new-logo.webp",
+            "width": 200,
+            "height": 200
+          }
+        },
+        "author": {
+          "@type": "Person",
+          "name": "Andrei"
+        }
+      }
+    </script>
+    <!-- End JSON-LD for Thunderpick CS2 Skin Giveaway -->
   </head>
   <body>
     <div id="news-background"></div>
