--- a/News-Articles/Thunderpick-DreamLeague-Combo-Insurance/index.html
+++ b/News-Articles/Thunderpick-DreamLeague-Combo-Insurance/index.html
@@ -60,6 +60,46 @@
         ]
       }
     </script>
+
+    <!-- JSON-LD for Thunderpick DreamLeague Combo Insurance -->
+    <script type="application/ld+json">
+      {
+        "@context": "https://schema.org",
+        "@type": "Promotion",
+        "name": "Thunderpick DreamLeague Combo Insurance",
+        "description": "Place a five-leg Combo Bet on DreamLeague Season 24 Group Stage 2 matches. If only one leg loses, you can claim a refund of up to €50.",
+        "url": "https://www.all4wins.com/News-Articles/Thunderpick-DreamLeague-Combo-Insurance/",
+        "image": "https://www.all4wins.com/img/news-banners/thunderpick-backup.webp",
+        "startDate": "2024-11-01",
+        "endDate": "2024-11-07",
+        "offers": {
+          "@type": "Offer",
+          "url": "https://www.all4wins.com/News-Articles/Thunderpick-DreamLeague-Combo-Insurance/",
+          "price": "0",
+          "priceCurrency": "EUR",
+          "eligibleRegion": "Worldwide",
+          "availability": "https://schema.org/SoldOut",
+          "validFrom": "2024-11-01",
+          "validThrough": "2024-11-07"
+        },
+        "publisher": {
+          "@type": "Organization",
+          "@id": "https://www.all4wins.com/#organization",
+          "name": "All4Wins",
+          "logo": {
+            "@type": "ImageObject",
+            "url": "https://www.all4wins.com/img/All4Wins-new-logo.webp",
+            "width": 200,
+            "height": 200
+          }
+        },
+        "author": {
+          "@type": "Person",
+          "name": "Andrei"
+        }
+      }
+    </script>
+    <!-- End JSON-LD for Thunderpick DreamLeague Combo Insurance -->
   </head>
   <body>
     <div id="news-background"></div>
