--- a/News-Articles/Thunderpick-Perfect-World-Shanghai-Major-2024/index.html
+++ b/News-Articles/Thunderpick-Perfect-World-Shanghai-Major-2024/index.html
@@ -62,6 +62,46 @@
         ]
       }
     </script>
+
+    <!-- JSON-LD for Thunderpick Perfect World Shanghai Major 2024 -->
+    <script type="application/ld+json">
+      {
+        "@context": "https://schema.org",
+        "@type": "Promotion",
+        "name": "Thunderpick Perfect World Shanghai Major 2024",
+        "description": "Place two qualifying bets totaling €10 or more during each phase of the tournament to earn a €5 cash bonus per phase, up to €20 in total.",
+        "url": "https://www.all4wins.com/News-Articles/Thunderpick-Perfect-World-Shanghai-Major-2024/",
+        "image": "https://www.all4wins.com/img/news-banners/Thunderpick-shanghai-Major-Banner.webp",
+        "startDate": "2024-11-11",
+        "endDate": "2024-12-08",
+        "offers": {
+          "@type": "Offer",
+          "url": "https://www.all4wins.com/News-Articles/Thunderpick-Perfect-World-Shanghai-Major-2024/",
+          "price": "0",
+          "priceCurrency": "EUR",
+          "eligibleRegion": "Worldwide",
+          "availability": "https://schema.org/SoldOut",
+          "validFrom": "2024-11-11",
+          "validThrough": "2024-12-08"
+        },
+        "publisher": {
+          "@type": "Organization",
+          "@id": "https://www.all4wins.com/#organization",
+          "name": "All4Wins",
+          "logo": {
+            "@type": "ImageObject",
+            "url": "https://www.all4wins.com/img/All4Wins-new-logo.webp",
+            "width": 200,
+            "height": 200
+          }
+        },
+        "author": {
+          "@type": "Person",
+          "name": "Andrei"
+        }
+      }
+    </script>
+    <!-- End JSON-LD for Thunderpick Perfect World Shanghai Major 2024 -->
   </head>
   <body>
     <div id="news-background"></div>
