--- a/News-Articles/Thunderpick-same-game-combo/index.html
+++ b/News-Articles/Thunderpick-same-game-combo/index.html
@@ -60,6 +60,46 @@
         ]
       }
     </script>
+
+    <!-- JSON-LD for Thunderpick Same Game Combo -->
+    <script type="application/ld+json">
+      {
+        "@context": "https://schema.org",
+        "@type": "Promotion",
+        "name": "Thunderpick Same Game Combo",
+        "description": "Combine multiple selections from a single esports match into one bet for higher odds and potential payouts. Available for League of Legends, CS2, and VALORANT.",
+        "url": "https://www.all4wins.com/News-Articles/Thunderpick-same-game-combo/",
+        "image": "https://www.all4wins.com/img/news-banners/thunderpick-samegame.webp",
+        "startDate": "2024-10-02",
+        "endDate": "2024-10-13",
+        "offers": {
+          "@type": "Offer",
+          "url": "https://www.all4wins.com/News-Articles/Thunderpick-same-game-combo/",
+          "price": "0",
+          "priceCurrency": "EUR",
+          "eligibleRegion": "Worldwide",
+          "availability": "https://schema.org/SoldOut",
+          "validFrom": "2024-10-02",
+          "validThrough": "2024-10-13"
+        },
+        "publisher": {
+          "@type": "Organization",
+          "@id": "https://www.all4wins.com/#organization",
+          "name": "All4Wins",
+          "logo": {
+            "@type": "ImageObject",
+            "url": "https://www.all4wins.com/img/All4Wins-new-logo.webp",
+            "width": 200,
+            "height": 200
+          }
+        },
+        "author": {
+          "@type": "Person",
+          "name": "Andrei"
+        }
+      }
+    </script>
+    <!-- End JSON-LD for Thunderpick Same Game Combo -->
   </head>
   <body>
     <div id="news-background"></div>
