--- a/News-Articles/Thunderpick_LoL_Spring_Season_2025_Earn_Up_to_20_Euro_in_Cash_Bonuses/index.html
+++ b/News-Articles/Thunderpick_LoL_Spring_Season_2025_Earn_Up_to_20_Euro_in_Cash_Bonuses/index.html
@@ -60,6 +60,46 @@
         ]
       }
     </script>
+
+    <!-- JSON-LD for Thunderpick LoL Spring Season 2025 Promotion -->
+    <script type="application/ld+json">
+      {
+        "@context": "https://schema.org",
+        "@type": "Promotion",
+        "name": "Thunderpick LoL Spring Season 2025: Earn Up to €20 in Cash Bonuses",
+        "description": "Participate in Thunderpick's League of Legends Spring Season 2025 promotion by placing qualifying bets on selected LoL tournaments to earn up to €20 in cash bonuses. The promotion is divided into four phases, each offering a €5 bonus for meeting the betting requirements.",
+        "url": "https://www.all4wins.com/News-Articles/Thunderpick_LoL_Spring_Season_2025_Earn_Up_to_20_Euro_in_Cash_Bonuses/",
+        "image": "https://www.all4wins.com/img/news-banners/thunderpick-lol-bet-banner.webp",
+        "startDate": "2025-05-19",
+        "endDate": "2025-06-15",
+        "offers": {
+          "@type": "Offer",
+          "url": "https://www.all4wins.com/News-Articles/Thunderpick_LoL_Spring_Season_2025_Earn_Up_to_20_Euro_in_Cash_Bonuses/",
+          "price": "0",
+          "priceCurrency": "EUR",
+          "eligibleRegion": "Worldwide",
+          "availability": "https://schema.org/SoldOut",
+          "validFrom": "2025-05-19",
+          "validThrough": "2025-06-15"
+        },
+        "publisher": {
+          "@type": "Organization",
+          "@id": "https://www.all4wins.com/#organization",
+          "name": "All4Wins",
+          "logo": {
+            "@type": "ImageObject",
+            "url": "https://www.all4wins.com/img/All4Wins-new-logo.webp",
+            "width": 200,
+            "height": 200
+          }
+        },
+        "author": {
+          "@type": "Person",
+          "name": "Andrei"
+        }
+      }
+    </script>
+    <!-- End JSON-LD for Thunderpick LoL Spring Season 2025 Promotion -->
   </head>
   <body>
     <div id="news-background"></div>
