--- a/News-Articles/thunderpick-LoL-World2024-bets-boost/index.html
+++ b/News-Articles/thunderpick-LoL-World2024-bets-boost/index.html
@@ -60,6 +60,46 @@
         ]
       }
     </script>
+
+    <!-- JSON-LD for Thunderpick LoL Worlds 2024 Combo Bet Boost -->
+    <script type="application/ld+json">
+      {
+        "@context": "https://schema.org",
+        "@type": "Promotion",
+        "name": "Thunderpick LoL Worlds 2024 Combo Bet Boost",
+        "description": "Place a combo bet with at least five selections, each with minimum odds of 1.4, and include at least one event from the Worlds 2024 Swiss Stage. Depending on the number of legs, your winnings can be boosted by up to 200%.",
+        "url": "https://www.all4wins.com/News-Articles/thunderpick-LoL-World2024-bets-boost/",
+        "image": "https://www.all4wins.com/img/news-banners/Thunderpick-WC.jpg.webp",
+        "startDate": "2024-10-03",
+        "endDate": "2024-10-13",
+        "offers": {
+          "@type": "Offer",
+          "url": "https://www.all4wins.com/News-Articles/thunderpick-LoL-World2024-bets-boost/",
+          "price": "0",
+          "priceCurrency": "EUR",
+          "eligibleRegion": "Worldwide",
+          "availability": "https://schema.org/SoldOut",
+          "validFrom": "2024-10-03",
+          "validThrough": "2024-10-13"
+        },
+        "publisher": {
+          "@type": "Organization",
+          "@id": "https://www.all4wins.com/#organization",
+          "name": "All4Wins",
+          "logo": {
+            "@type": "ImageObject",
+            "url": "https://www.all4wins.com/img/All4Wins-new-logo.webp",
+            "width": 200,
+            "height": 200
+          }
+        },
+        "author": {
+          "@type": "Person",
+          "name": "Andrei"
+        }
+      }
+    </script>
+    <!-- End JSON-LD for Thunderpick LoL Worlds 2024 Combo Bet Boost -->
   </head>
   <body>
     <div id="news-background"></div>
