--- a/News-Articles/Thunderpick-Worlds-2024-bonus/index.html
+++ b/News-Articles/Thunderpick-Worlds-2024-bonus/index.html
@@ -60,6 +60,46 @@
         ]
       }
     </script>
+
+    <!-- JSON-LD for Thunderpick Worlds 2024 Combo Bet Insurance -->
+    <script type="application/ld+json">
+      {
+        "@context": "https://schema.org",
+        "@type": "Promotion",
+        "name": "Thunderpick Worlds 2024 Combo Bet Insurance",
+        "description": "Place a 5-leg combo bet with odds of 1.4 or higher per leg, including at least one match from the Worlds 2024 Play-In Stage. If only one leg loses, receive a refund up to €50.",
+        "url": "https://www.all4wins.com/News-Articles/Thunderpick-Worlds-2024-bonus/",
+        "image": "https://www.all4wins.com/img/news-banners/thunderpick-lol-banner.webp",
+        "startDate": "2024-09-25",
+        "endDate": "2024-09-29",
+        "offers": {
+          "@type": "Offer",
+          "url": "https://www.all4wins.com/News-Articles/Thunderpick-Worlds-2024-bonus/",
+          "price": "0",
+          "priceCurrency": "EUR",
+          "eligibleRegion": "Worldwide",
+          "availability": "https://schema.org/SoldOut",
+          "validFrom": "2024-09-25",
+          "validThrough": "2024-09-29"
+        },
+        "publisher": {
+          "@type": "Organization",
+          "@id": "https://www.all4wins.com/#organization",
+          "name": "All4Wins",
+          "logo": {
+            "@type": "ImageObject",
+            "url": "https://www.all4wins.com/img/All4Wins-new-logo.webp",
+            "width": 200,
+            "height": 200
+          }
+        },
+        "author": {
+          "@type": "Person",
+          "name": "Andrei"
+        }
+      }
+    </script>
+    <!-- End JSON-LD for Thunderpick Worlds 2024 Combo Bet Insurance -->
   </head>
   <body>
     <div id="news-background"></div>
