--- a/News-Articles/Thunderpick's-IEM-Rio-2024-Betting-Predictions/index.html
+++ b/News-Articles/Thunderpick's-IEM-Rio-2024-Betting-Predictions/index.html
@@ -58,6 +58,46 @@
         ]
       }
     </script>
+
+    <!-- JSON-LD for Thunderpick's IEM Rio 2024 Betting Predictions -->
+    <script type="application/ld+json">
+      {
+        "@context": "https://schema.org",
+        "@type": "Promotion",
+        "name": "Thunderpick's IEM Rio 2024 Betting Predictions",
+        "description": "Expert betting predictions for the IEM Rio 2024, featuring top CS2 teams competing for a share of the $250,000 prize pool and a spot at IEM Katowice 2025.",
+        "url": "https://www.all4wins.com/News-Articles/Thunderpick's-IEM-Rio-2024-Betting-Predictions/",
+        "image": "https://www.all4wins.com/img/news-banners/thunderpick-banner-rio.webp",
+        "startDate": "2024-10-07",
+        "endDate": "2024-10-11",
+        "offers": {
+          "@type": "Offer",
+          "url": "https://www.all4wins.com/News-Articles/Thunderpick's-IEM-Rio-2024-Betting-Predictions/",
+          "price": "0",
+          "priceCurrency": "EUR",
+          "eligibleRegion": "Worldwide",
+          "availability": "https://schema.org/SoldOut",
+          "validFrom": "2024-10-07",
+          "validThrough": "2024-10-11"
+        },
+        "publisher": {
+          "@type": "Organization",
+          "@id": "https://www.all4wins.com/#organization",
+          "name": "All4Wins",
+          "logo": {
+            "@type": "ImageObject",
+            "url": "https://www.all4wins.com/img/All4Wins-new-logo.webp",
+            "width": 200,
+            "height": 200
+          }
+        },
+        "author": {
+          "@type": "Person",
+          "name": "Andrei"
+        }
+      }
+    </script>
+    <!-- End JSON-LD for Thunderpick's IEM Rio 2024 Betting Predictions -->
   </head>
   <body>
     <div id="news-background"></div>
