--- a/News-Articles/Top-Crypto-Casinos/index.html
+++ b/News-Articles/Top-Crypto-Casinos/index.html
@@ -60,6 +60,36 @@
         ]
       }
     </script>
+
+    <!-- JSON-LD for Top Crypto Casinos -->
+    <script type="application/ld+json">
+      {
+        "@context": "https://schema.org",
+        "@type": "Article",
+        "headline": "Top Crypto Casinos: Roll the Dice with Crypto",
+        "description": "Explore the benefits of using cryptocurrency in online casinos, including enhanced security, faster payouts, and lower fees. Discover top-rated crypto casinos like BC.Game, Roobet, Betfury, and Vave, and learn why they stand out in the world of online gambling.",
+        "url": "https://www.all4wins.com/News-Articles/Top-Crypto-Casinos/",
+        "image": "https://www.all4wins.com/img/news-banners/crypto-banner.webp",
+        "datePublished": "2024-01-15",
+        "dateModified": "2025-08-28",
+        "author": {
+          "@type": "Person",
+          "name": "Andrei"
+        },
+        "publisher": {
+          "@type": "Organization",
+          "name": "All4Wins",
+          "logo": {
+            "@type": "ImageObject",
+            "url": "https://www.all4wins.com/img/All4Wins-new-logo.webp",
+            "width": 200,
+            "height": 200
+          }
+        },
+        "mainEntityOfPage": "https://www.all4wins.com/News-Articles/Top-Crypto-Casinos/"
+      }
+    </script>
+    <!-- End JSON-LD for Top Crypto Casinos -->
   </head>
   <body>
     <div id="news-background"></div>
