--- a/News-Articles/TrustDice-6th-Birthday/index.html
+++ b/News-Articles/TrustDice-6th-Birthday/index.html
@@ -60,6 +60,46 @@
         ]
       }
     </script>
+
+    <!-- JSON-LD for TrustDice 6th Birthday Bash -->
+    <script type="application/ld+json">
+      {
+        "@context": "https://schema.org",
+        "@type": "Promotion",
+        "name": "TrustDice 6th Birthday Bash",
+        "description": "Celebrate TrustDice's 6th anniversary with a massive $120,000+ prize pool, including a 500% welcome bonus and 100 free spins across your first three deposits.",
+        "url": "https://www.all4wins.com/News-Articles/TrustDice-6th-Birthday/",
+        "image": "https://www.all4wins.com/img/news-banners/trustdice-6th.webp",
+        "startDate": "2024-11-11",
+        "endDate": "2024-12-01",
+        "offers": {
+          "@type": "Offer",
+          "url": "https://www.all4wins.com/News-Articles/TrustDice-6th-Birthday/",
+          "price": "0",
+          "priceCurrency": "USD",
+          "eligibleRegion": "Worldwide",
+          "availability": "https://schema.org/SoldOut",
+          "validFrom": "2024-11-11",
+          "validThrough": "2024-12-01"
+        },
+        "publisher": {
+          "@type": "Organization",
+          "@id": "https://www.all4wins.com/#organization",
+          "name": "All4Wins",
+          "logo": {
+            "@type": "ImageObject",
+            "url": "https://www.all4wins.com/img/All4Wins-new-logo.webp",
+            "width": 200,
+            "height": 200
+          }
+        },
+        "author": {
+          "@type": "Person",
+          "name": "Andrei"
+        }
+      }
+    </script>
+    <!-- End JSON-LD for TrustDice 6th Birthday Bash -->
   </head>
   <body>
     <div id="news-background"></div>
