--- a/News-Articles/TrustDice-Spooktacular-100-FS/index.html
+++ b/News-Articles/TrustDice-Spooktacular-100-FS/index.html
@@ -60,6 +60,46 @@
         ]
       }
     </script>
+
+    <!-- JSON-LD for TrustDice Spooktacular 100 Free Spins -->
+    <script type="application/ld+json">
+      {
+        "@context": "https://schema.org",
+        "@type": "Promotion",
+        "name": "TrustDice Spooktacular 100 Free Spins",
+        "description": "Celebrate Halloween with TrustDice's Spooktacular Spins promotion, offering up to 100 Free Spins daily on select haunted slot games from October 21 to November 4, 2024.",
+        "url": "https://www.all4wins.com/News-Articles/TrustDice-Spooktacular-100-FS/",
+        "image": "https://www.all4wins.com/img/news-banners/trustdice-FS.webp",
+        "startDate": "2024-10-21",
+        "endDate": "2024-11-04",
+        "offers": {
+          "@type": "Offer",
+          "url": "https://www.all4wins.com/News-Articles/TrustDice-Spooktacular-100-FS/",
+          "price": "0",
+          "priceCurrency": "USD",
+          "eligibleRegion": "Worldwide",
+          "availability": "https://schema.org/SoldOut",
+          "validFrom": "2024-10-21",
+          "validThrough": "2024-11-04"
+        },
+        "publisher": {
+          "@type": "Organization",
+          "@id": "https://www.all4wins.com/#organization",
+          "name": "All4Wins",
+          "logo": {
+            "@type": "ImageObject",
+            "url": "https://www.all4wins.com/img/All4Wins-new-logo.webp",
+            "width": 200,
+            "height": 200
+          }
+        },
+        "author": {
+          "@type": "Person",
+          "name": "Andrei"
+        }
+      }
+    </script>
+    <!-- End JSON-LD for TrustDice Spooktacular 100 Free Spins -->
   </head>
   <body>
     <div id="news-background"></div>
