--- a/News-Articles/Wild-Endorphina-Tiger-Tournament/index.html
+++ b/News-Articles/Wild-Endorphina-Tiger-Tournament/index.html
@@ -58,6 +58,46 @@
         ]
       }
     </script>
+
+    <!-- JSON-LD for Wild.io Endorphina Tiger Tournament -->
+    <script type="application/ld+json">
+      {
+        "@context": "https://schema.org",
+        "@type": "Promotion",
+        "name": "Wild.io Endorphina Tiger Tournament",
+        "description": "Participate in Wild.io's Endorphina Tiger Tournament from October 7 to 13, 2024, featuring a $2,000 prize pool and exciting Endorphina slots.",
+        "url": "https://www.all4wins.com/News-Articles/Wild-Endorphina-Tiger-Tournament/",
+        "image": "https://www.all4wins.com/img/news-banners/wild_Endorphina_sponsored_tournament_October.webp",
+        "startDate": "2024-10-07",
+        "endDate": "2024-10-13",
+        "offers": {
+          "@type": "Offer",
+          "url": "https://www.all4wins.com/News-Articles/Wild-Endorphina-Tiger-Tournament/",
+          "price": "0",
+          "priceCurrency": "USD",
+          "eligibleRegion": "Worldwide",
+          "availability": "https://schema.org/SoldOut",
+          "validFrom": "2024-10-07",
+          "validThrough": "2024-10-13"
+        },
+        "publisher": {
+          "@type": "Organization",
+          "@id": "https://www.all4wins.com/#organization",
+          "name": "All4Wins",
+          "logo": {
+            "@type": "ImageObject",
+            "url": "https://www.all4wins.com/img/All4Wins-new-logo.webp",
+            "width": 200,
+            "height": 200
+          }
+        },
+        "author": {
+          "@type": "Person",
+          "name": "Andrei"
+        }
+      }
+    </script>
+    <!-- End JSON-LD for Wild.io Endorphina Tiger Tournament -->
   </head>
   <body>
     <div id="news-background"></div>
