--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
       WB!
     </title>
 
-    <!-- json -ld -->
+    <!-- JSON-LD for All4Wins Homepage -->
     <script type="application/ld+json">
       {
         "@context": "https://schema.org",
@@ -69,11 +69,23 @@
               "target": "https://www.all4wins.com/search?q={search_term_string}",
               "query-input": "required name=search_term_string"
             }
+          },
+          {
+            "@type": "WebPage",
+            "@id": "https://www.all4wins.com/#homepage",
+            "url": "https://www.all4wins.com/",
+            "name": "All4Wins",
+            "description": "Discover top casinos, thrilling sports, and esports betting with amazing free spins, free bets, and unbeatable welcome bonuses!",
+            "publisher": {
+              "@type": "Organization",
+              "@id": "https://www.all4wins.com/#organization"
+            },
+            "inLanguage": "en-US"
           }
         ]
       }
     </script>
-    <!-- end json -ld -->
+    <!-- End JSON-LD for All4Wins Homepage -->
   </head>
 
   <body>
