--- a/Bonuses/First-Deposit/index.html
+++ b/Bonuses/First-Deposit/index.html
@@ -22,7 +22,8 @@
       content="Explore the top first deposit bonuses for online casinos in 202! Discover limited free spins and free bets, plus read in-depth reviews from leading platforms to maximize your initial deposit!"
     />
 
-    <meta http-equiv="Content-Type" content="text/html ;charset="UTF-8" />
+    <meta charset="UTF-8" />
+
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="icon" type="image/x-icon" href="/img/favicon.ico" />
     <link
