--- a/Bonuses/No-Deposit/index.html
+++ b/Bonuses/No-Deposit/index.html
@@ -21,7 +21,8 @@
       name="description"
       content="Discover  no deposit bonus deals forom the best online casinos in 2025. Explore limited free casino money offers and read detailed reviews from leading platforms to maximize your gaming experience."
     />
-    <meta http-equiv="Content-Type" content="text/html ;charset="UTF-8" />
+    <meta charset="UTF-8" />
+
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="icon" type="image/x-icon" href="/img/favicon.ico" />
     <link rel="canonical" href="https://www.all4wins.com/Bonuses/No-Deposit/" />
