--- a/Bonuses/No-Wagering/index.html
+++ b/Bonuses/No-Wagering/index.html
@@ -21,7 +21,8 @@
       name="description"
       content="Explore the top no wagering casinos in 2025. Discover the best offers and read expert reviews to find the top deals with no wagering requirements."
     />
-    <meta http-equiv="Content-Type" content="text/html ;charset="UTF-8" />
+    <meta charset="UTF-8" />
+
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="icon" type="image/x-icon" href="/img/favicon.ico" />
     <link
