--- a/News-Articles/5-Major-leagues-Promotion-BC.Games/index.html
+++ b/News-Articles/5-Major-leagues-Promotion-BC.Games/index.html
@@ -64,6 +64,7 @@
     </script>
 
     <!-- JSON-LD Promotion for BC.GAME 5 Major Leagues Free Bets -->
+
     <script type="application/ld+json">
       {
         "@context": "https://schema.org",
@@ -95,10 +96,7 @@
             "height": 200
           }
         },
-        "author": {
-          "@type": "Person",
-          "name": "Andrei"
-        }
+        "author": { "@type": "Person", "name": "Andrei" }
       }
     </script>
     <!-- End JSON-LD Promotion for BC.GAME 5 Major Leagues -->
