--- a/Sports/index.html
+++ b/Sports/index.html
@@ -23,7 +23,8 @@
       name="description"
       content="Unlock free bets and generous welcome bonuses at the top sports betting sites—start betting now!"
     />
-    <meta http-equiv="Content-Type" content="text/html ;charset="UTF-8" />
+    <meta charset="UTF-8" />
+
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="icon" type="image/x-icon" href="/img/favicon.ico" />
 
