--- a/Bonuses/Cashback/index.html
+++ b/Bonuses/Cashback/index.html
@@ -22,7 +22,8 @@
       content="Get Money Back with The Best Online Casino Cashback Offers in 2025: Exclusive Deals & Reviews from Leading Platforms"
     />
 
-    <meta http-equiv="Content-Type" content="text/html ;charset="UTF-8" />
+    <meta charset="UTF-8" />
+
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="icon" type="image/x-icon" href="/img/favicon.ico" />
     <link rel="canonical" href="https://www.all4wins.com/Bonuses/Cashback/" />
