--- a/Casinos/index.html
+++ b/Casinos/index.html
@@ -22,7 +22,8 @@
       name="description"
       content="Spin your way to success with the top casinos packed with FS deals and generous WBs"
     />
-    <meta http-equiv="Content-Type" content="text/html ;charset="UTF-8" />
+    <meta charset="UTF-8" />
+
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="icon" type="image/x-icon" href="/img/favicon.ico" />
     <link rel="canonical" href="https://www.all4wins.com/Casinos/" />
