--- a/index.html
+++ b/index.html
@@ -23,7 +23,8 @@
       name="description"
       content="All4Wins: Discover top casinos, thrilling sports, and esports betting with amazing free spins, free bets, and unbeatable welcome bonuses!"
     />
-    <meta http-equiv="Content-Type" content="text/html ;charset=UTF-8" />
+    <meta charset="UTF-8" />
+
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="icon" type="image/x-icon" href="/img/favicon.ico" />
     <link rel="canonical" href="https://www.all4wins.com/" />
