--- a/Bonuses/Cashback/index.html
+++ b/Bonuses/Cashback/index.html
@@ -61,6 +61,7 @@
         "@type": "Article",
         "headline": "Get Money Back with The Best Online Casino Cashback Offers in 2025",
         "description": "Discover the top cashback offers from leading online casinos to enhance your gaming experience.",
+        "image": "https://www.all4wins.com/img/All4Wins-new-logo.webp",
         "author": {
           "@type": "Person",
           "name": "Andrei"
@@ -79,7 +80,9 @@
         "mainEntityOfPage": {
           "@type": "WebPage",
           "@id": "https://www.all4wins.com/Bonuses/Cashback/"
-        }
+        },
+        "datePublished": "2024-08-10",
+        "dateModified": "2024-09-29"
       }
     </script>
     <!-- End JSON-LD for Cashback Bonus Article -->
