--- a/Bonuses/No-Wagering/index.html
+++ b/Bonuses/No-Wagering/index.html
@@ -54,14 +54,15 @@
         ]
       }
     </script>
-
-    <!-- JSON-LD for No Wagering Bonus Article -->
+    <!-- JSON-LD Article for No Wagering Casino Bonuses -->
     <script type="application/ld+json">
       {
         "@context": "https://schema.org",
         "@type": "Article",
         "headline": "No Wagering Casino Bonuses Explained",
         "description": "Explore top no wagering bonuses from leading online casinos, allowing you to keep what you win without any playthrough requirements.",
+        "articleBody": "This article covers the best no wagering bonuses offered by online casinos, explaining how they work, how to claim them, and tips to maximize your winnings without any playthrough requirements.",
+        "image": "https://www.all4wins.com/img/All4Wins-new-logo.webp",
         "author": {
           "@type": "Person",
           "name": "Andrei"
@@ -77,13 +78,15 @@
             "height": 200
           }
         },
+        "datePublished": "2024-08-10",
+        "dateModified": "2024-08-26",
         "mainEntityOfPage": {
           "@type": "WebPage",
           "@id": "https://www.all4wins.com/Bonuses/No-Wagering/"
         }
       }
     </script>
-    <!-- End JSON-LD for No Wagering Bonus Article -->
+    <!-- End JSON-LD Article for No Wagering Casino Bonuses -->
   </head>
 
   <body>
