--- a/Reviews-page/DuelBits/index.html
+++ b/Reviews-page/DuelBits/index.html
@@ -52,35 +52,37 @@
       }
     </script>
 
-    <!-- JSON-LD Review for DuelBits -->
+    <!-- JSON-LD Article for DuelBits -->
     <script type="application/ld+json">
       {
         "@context": "https://schema.org",
-        "@type": "Review",
-        "itemReviewed": {
-          "@type": "Casino",
-          "name": "DuelBits",
-          "url": "https://www.all4wins.com/Reviews-page/DuelBits/",
-          "image": "https://www.all4wins.com/img/news-banners/duelbits-banner.webp",
-          "description": "DuelBits is a crypto-friendly casino and sportsbook offering over 6,000 games, including slots, table games, live dealer options, and unique in-house games like Crash and Dice Duel.",
-          "brand": {
-            "@type": "Brand",
-            "name": "DuelBits"
-          }
-        },
+        "@type": "Article",
+        "headline": "DuelBits Review",
+        "description": "DuelBits is a crypto-friendly casino and sportsbook offering over 6,000 games, including slots, table games, live dealer options, and unique in-house games like Crash and Dice Duel. This article reviews the platform's features, games, and user experience.",
+        "articleBody": "DuelBits offers a diverse gaming experience with a wide selection of games and a user-friendly interface. The platform provides instant payouts and a variety of promotions, including cashback offers and weekly raffles. Some users have reported issues with bonus eligibility and account verification processes.",
+        "image": "https://www.all4wins.com/img/news-banners/duelbits-banner.webp",
         "author": {
           "@type": "Person",
           "name": "Andrei"
         },
         "publisher": {
           "@type": "Organization",
-          "@id": "https://www.all4wins.com/#organization"
+          "@id": "https://www.all4wins.com/#organization",
+          "name": "All4Wins",
+          "logo": {
+            "@type": "ImageObject",
+            "url": "https://www.all4wins.com/img/news-banners/duelbits-banner.webp"
+          }
         },
         "datePublished": "2024-08-12",
-        "reviewBody": "DuelBits offers a diverse gaming experience with a wide selection of games and a user-friendly interface. The platform provides instant payouts and a variety of promotions, including cashback offers and weekly raffles. Some users have reported issues with bonus eligibility and account verification processes."
+        "dateModified": "2024-08-28",
+        "mainEntityOfPage": {
+          "@type": "WebPage",
+          "@id": "https://www.all4wins.com/Reviews-page/DuelBits/"
+        }
       }
     </script>
-    <!-- End JSON-LD Review for DuelBits -->
+    <!-- End JSON-LD Article for DuelBits -->
   </head>
   <body>
     <div id="home-background"></div>
