--- a/Reviews-page/Katsubet/index.html
+++ b/Reviews-page/Katsubet/index.html
@@ -58,35 +58,37 @@
       }
     </script>
 
-    <!-- JSON-LD Review for KatsuBet -->
+    <!-- JSON-LD Article for KatsuBet -->
     <script type="application/ld+json">
       {
         "@context": "https://schema.org",
-        "@type": "Review",
-        "itemReviewed": {
-          "@type": "Casino",
-          "name": "KatsuBet",
-          "url": "https://www.all4wins.com/Reviews-page/Katsubet/",
-          "image": "https://www.all4wins.com/img/news-banners/Katsubet-banner.webp",
-          "description": "KatsuBet is a crypto-friendly online casino offering over 7,000 games, including slots, table games, and live dealer options. The platform features a generous welcome package, weekly promotions, and a rewarding VIP program.",
-          "brand": {
-            "@type": "Brand",
-            "name": "KatsuBet"
-          }
-        },
+        "@type": "Article",
+        "headline": "KatsuBet Review",
+        "description": "KatsuBet is a crypto-friendly online casino offering over 7,000 games, including slots, table games, and live dealer options. The platform features a generous welcome package, weekly promotions, and a rewarding VIP program. This article reviews the platform's features, games, and user experience.",
+        "articleBody": "KatsuBet offers a diverse gaming experience with a vast selection of games and a user-friendly interface. The platform provides instant payouts and a variety of promotions, including cashback offers and weekly raffles. Some users have reported issues with bonus eligibility and account verification processes.",
+        "image": "https://www.all4wins.com/img/news-banners/Katsubet-banner.webp",
         "author": {
           "@type": "Person",
           "name": "Andrei"
         },
         "publisher": {
           "@type": "Organization",
-          "@id": "https://www.all4wins.com/#organization"
+          "@id": "https://www.all4wins.com/#organization",
+          "name": "All4Wins",
+          "logo": {
+            "@type": "ImageObject",
+            "url": "https://www.all4wins.com/img/news-banners/Katsubet-banner.webp"
+          }
         },
         "datePublished": "2024-08-13",
-        "reviewBody": "KatsuBet offers a diverse gaming experience with a vast selection of games and a user-friendly interface. The platform provides instant payouts and a variety of promotions, including cashback offers and weekly raffles. Some users have reported issues with bonus eligibility and account verification processes."
+        "dateModified": "2024-08-29",
+        "mainEntityOfPage": {
+          "@type": "WebPage",
+          "@id": "https://www.all4wins.com/Reviews-page/Katsubet/"
+        }
       }
     </script>
-    <!-- End JSON-LD Review for KatsuBet -->
+    <!-- End JSON-LD Article for KatsuBet -->
   </head>
   <body>
     <div id="home-background"></div>
