--- a/Bonuses/First-Deposit/index.html
+++ b/Bonuses/First-Deposit/index.html
@@ -63,6 +63,8 @@
         "@type": "Article",
         "headline": "Best First Deposit Sign-Up Bonuses in 2025",
         "description": "Explore top online casinos offering generous first deposit bonuses, including match percentages and free spins, to kickstart your gaming experience.",
+        "articleBody": "This article covers the best first deposit bonuses offered by online casinos in 2025, including match percentages, free spins, and other perks to maximize your initial deposits and gaming experience.",
+        "image": "https://www.all4wins.com/img/All4Wins-new-logo.webp",
         "author": {
           "@type": "Person",
           "name": "Andrei"
@@ -78,6 +80,8 @@
             "height": 200
           }
         },
+        "datePublished": "2024-08-11",
+        "dateModified": "2024-09-05",
         "mainEntityOfPage": {
           "@type": "WebPage",
           "@id": "https://www.all4wins.com/Bonuses/First-Deposit/"
