--- a/Bonuses/No-Deposit/index.html
+++ b/Bonuses/No-Deposit/index.html
@@ -51,13 +51,15 @@
       }
     </script>
 
-    <!-- JSON-LD for No Deposit Bonus Article -->
+    <!-- JSON-LD Article for No Deposit Bonuses -->
     <script type="application/ld+json">
       {
         "@context": "https://schema.org",
         "@type": "Article",
         "headline": "No Deposit Bonuses Explained",
         "description": "Discover no deposit bonuses offered by top online casinos and how to claim them.",
+        "articleBody": "This article explains no deposit bonuses available at online casinos, including how to claim them, terms and conditions, and tips to maximize your rewards without making an initial deposit.",
+        "image": "https://www.all4wins.com/img/All4Wins-new-logo.webp",
         "author": {
           "@type": "Person",
           "name": "Andrei"
@@ -73,13 +75,15 @@
             "height": 200
           }
         },
+        "datePublished": "2024-08-09",
+        "dateModified": "2024-08-25",
         "mainEntityOfPage": {
           "@type": "WebPage",
           "@id": "https://www.all4wins.com/Bonuses/No-Deposit/"
         }
       }
     </script>
-    <!-- End JSON-LD for No Deposit Bonus Article -->
+    <!-- End JSON-LD Article for No Deposit Bonuses -->
   </head>
 
   <body>
