--- a/Reviews-page/BC.Games/index.html
+++ b/Reviews-page/BC.Games/index.html
@@ -52,35 +52,38 @@
         ]
       }
     </script>
-    <!-- JSON-LD Review for BC.Games -->
+
+    <!-- JSON-LD Article for BC.Games -->
     <script type="application/ld+json">
       {
         "@context": "https://schema.org",
-        "@type": "Review",
-        "itemReviewed": {
-          "@type": "Casino",
-          "name": "BC.Games",
-          "url": "https://www.all4wins.com/Reviews-page/BC.Games/",
-          "image": "https://www.all4wins.com/img/news-banners/BCGAMES-Banner.gif",
-          "description": "BC.Games is a community-driven crypto casino offering a vast selection of games, including slots, table games, and live dealer options. Players can enjoy a wide range of promotions and bonuses, including a generous welcome package.",
-          "brand": {
-            "@type": "Brand",
-            "name": "BC.Games"
-          }
-        },
+        "@type": "Article",
+        "headline": "BC.Games Review",
+        "description": "BC.Games is a community-driven crypto casino offering a vast selection of games, including slots, table games, and live dealer options. Players can enjoy a wide range of promotions and bonuses, including a generous welcome package. This article reviews the platform's features, games, and user experience.",
+        "articleBody": "BC.Games offers a diverse gaming experience with a strong community focus. The platform provides a variety of games, including exclusive titles, and supports multiple cryptocurrencies. While the site offers attractive bonuses, some users have reported issues with account verification and bonus eligibility.",
+        "image": "https://www.all4wins.com/img/news-banners/BCGAMES-Banner.gif",
         "author": {
           "@type": "Person",
           "name": "Andrei"
         },
         "publisher": {
           "@type": "Organization",
-          "@id": "https://www.all4wins.com/#organization"
+          "@id": "https://www.all4wins.com/#organization",
+          "name": "All4Wins",
+          "logo": {
+            "@type": "ImageObject",
+            "url": "https://www.all4wins.com/img/news-banners/BCGAMES-Banner.gif"
+          }
         },
-        "datePublished": "2024-08-10",
-        "reviewBody": "BC.Games offers a diverse gaming experience with a strong community focus. The platform provides a variety of games, including exclusive titles, and supports multiple cryptocurrencies. While the site offers attractive bonuses, some users have reported issues with account verification and bonus eligibility."
+        "datePublished": "2024-08-12",
+        "dateModified": "2024-08-28",
+        "mainEntityOfPage": {
+          "@type": "WebPage",
+          "@id": "https://www.all4wins.com/Reviews-page/BC.Games/"
+        }
       }
     </script>
-    <!-- End JSON-LD Review for BC.Games -->
+    <!-- End JSON-LD Article for BC.Games -->
   </head>
   <body>
     <div id="home-background"></div>
