--- a/Reviews-page/BetFury/index.html
+++ b/Reviews-page/BetFury/index.html
@@ -48,35 +48,37 @@
       }
     </script>
 
-    <!-- JSON-LD Review for BetFury -->
+    <!-- JSON-LD Article for BetFury -->
     <script type="application/ld+json">
       {
         "@context": "https://schema.org",
-        "@type": "Review",
-        "itemReviewed": {
-          "@type": "Casino",
-          "name": "BetFury",
-          "url": "https://www.all4wins.com/Reviews-page/BetFury/",
-          "image": "https://www.all4wins.com/img/news-banners/BetFury-banner.webp",
-          "description": "BetFury is a licensed crypto casino offering over 6,000 games, including slots, table games, and exclusive in-house titles. The platform features a unique rank system, cashback rewards, and supports multiple cryptocurrencies.",
-          "brand": {
-            "@type": "Brand",
-            "name": "BetFury"
-          }
-        },
+        "@type": "Article",
+        "headline": "BetFury Review",
+        "description": "BetFury is a licensed crypto casino offering over 6,000 games, including slots, table games, and exclusive in-house titles. The platform features a unique rank system, cashback rewards, and supports multiple cryptocurrencies. This article reviews the platform's features, games, and user experience.",
+        "articleBody": "BetFury offers a diverse gaming experience with a wide selection of games and a user-friendly interface. The platform provides instant payouts and a variety of promotions, including cashback offers and weekly raffles. Some users have reported issues with bonus eligibility and account verification processes.",
+        "image": "https://www.all4wins.com/img/news-banners/BetFury-banner.webp",
         "author": {
           "@type": "Person",
           "name": "Andrei"
         },
         "publisher": {
           "@type": "Organization",
-          "@id": "https://www.all4wins.com/#organization"
+          "@id": "https://www.all4wins.com/#organization",
+          "name": "All4Wins",
+          "logo": {
+            "@type": "ImageObject",
+            "url": "https://www.all4wins.com/img/news-banners/BetFury-banner.webp"
+          }
         },
         "datePublished": "2024-08-15",
-        "reviewBody": "BetFury offers a diverse gaming experience with a wide selection of games and a user-friendly interface. The platform provides instant payouts and a variety of promotions, including cashback offers and weekly raffles. Some users have reported issues with bonus eligibility and account verification processes."
+        "dateModified": "2024-09-02",
+        "mainEntityOfPage": {
+          "@type": "WebPage",
+          "@id": "https://www.all4wins.com/Reviews-page/BetFury/"
+        }
       }
     </script>
-    <!-- End JSON-LD Review for BetFury -->
+    <!-- End JSON-LD Article for BetFury -->
   </head>
   <body>
     <div id="home-background"></div>
