--- a/Reviews-page/GG.Bet/index.html
+++ b/Reviews-page/GG.Bet/index.html
@@ -55,35 +55,37 @@
       }
     </script>
 
-    <!-- JSON-LD Review for GG.Bet -->
+    <!-- JSON-LD Article for GG.Bet -->
     <script type="application/ld+json">
       {
         "@context": "https://schema.org",
-        "@type": "Review",
-        "itemReviewed": {
-          "@type": "Casino",
-          "name": "GG.Bet",
-          "url": "https://www.all4wins.com/Reviews-page/GG.Bet/",
-          "image": "https://www.all4wins.com/img/news-banners/gg.bet-banner.webp",
-          "description": "GG.Bet is a crypto-friendly casino offering a wide variety of games, including slots, table games, live dealer options, and esports betting. The platform features a generous welcome bonus and a user-friendly interface.",
-          "brand": {
-            "@type": "Brand",
-            "name": "GG.Bet"
-          }
-        },
+        "@type": "Article",
+        "headline": "GG.Bet Review",
+        "description": "GG.Bet is a crypto-friendly casino offering a wide variety of games, including slots, table games, live dealer options, and esports betting. The platform features a generous welcome bonus and a user-friendly interface. This article reviews the platform's features, games, and user experience.",
+        "articleBody": "GG.Bet offers a comprehensive gaming experience with a diverse selection of games and a user-friendly interface. The platform provides various promotions and bonuses, including a generous welcome package. Some users have reported issues with account verification and withdrawal processes.",
+        "image": "https://www.all4wins.com/img/news-banners/gg.bet-banner.webp",
         "author": {
           "@type": "Person",
           "name": "Andrei"
         },
         "publisher": {
           "@type": "Organization",
-          "@id": "https://www.all4wins.com/#organization"
+          "@id": "https://www.all4wins.com/#organization",
+          "name": "All4Wins",
+          "logo": {
+            "@type": "ImageObject",
+            "url": "https://www.all4wins.com/img/news-banners/gg.bet-banner.webp"
+          }
         },
         "datePublished": "2024-08-12",
-        "reviewBody": "GG.Bet offers a comprehensive gaming experience with a diverse selection of games and a user-friendly interface. The platform provides various promotions and bonuses, including a generous welcome package. Some users have reported issues with account verification and withdrawal processes."
+        "dateModified": "2024-08-29",
+        "mainEntityOfPage": {
+          "@type": "WebPage",
+          "@id": "https://www.all4wins.com/Reviews-page/GG.Bet/"
+        }
       }
     </script>
-    <!-- End JSON-LD Review for GG.Bet -->
+    <!-- End JSON-LD Article for GG.Bet -->
   </head>
   <body>
     <div id="home-background"></div>
