--- a/Reviews-page/Roobet/index.html
+++ b/Reviews-page/Roobet/index.html
@@ -53,35 +53,37 @@
       }
     </script>
 
-    <!-- JSON-LD Review for Roobet -->
+    <!-- JSON-LD Article for Roobet -->
     <script type="application/ld+json">
       {
         "@context": "https://schema.org",
-        "@type": "Review",
-        "itemReviewed": {
-          "@type": "Casino",
-          "name": "Roobet",
-          "url": "https://www.all4wins.com/Reviews-page/Roobet/",
-          "image": "https://www.all4wins.com/img/news-banners/roobet-banner4.webp",
-          "description": "Roobet is a licensed crypto casino offering over 6,300 games, a sportsbook, and unique house games like 'Mission Uncrossable'.",
-          "brand": {
-            "@type": "Brand",
-            "name": "Roobet"
-          }
-        },
+        "@type": "Article",
+        "headline": "Roobet Review",
+        "description": "Roobet is a licensed crypto casino offering over 6,300 games, a sportsbook, and unique house games like 'Mission Uncrossable'. This article reviews the platform's features, games, and user experience.",
+        "articleBody": "Roobet offers a diverse gaming experience with a wide selection of games and a user-friendly interface. The platform provides instant payouts and a variety of promotions, including cashback offers and weekly raffles. Some users have reported issues with bonus eligibility and account verification processes.",
+        "image": "https://www.all4wins.com/img/news-banners/roobet-banner4.webp",
         "author": {
           "@type": "Person",
           "name": "Andrei"
         },
         "publisher": {
           "@type": "Organization",
-          "@id": "https://www.all4wins.com/#organization"
+          "@id": "https://www.all4wins.com/#organization",
+          "name": "All4Wins",
+          "logo": {
+            "@type": "ImageObject",
+            "url": "https://www.all4wins.com/img/news-banners/roobet-banner4.webp"
+          }
         },
         "datePublished": "2024-08-11",
-        "reviewBody": "Roobet offers a diverse gaming experience with a wide selection of games and a user-friendly interface. The platform provides instant payouts and a variety of promotions, including cashback offers and weekly raffles. Some users have reported issues with bonus eligibility and account verification processes."
+        "dateModified": "2024-08-29",
+        "mainEntityOfPage": {
+          "@type": "WebPage",
+          "@id": "https://www.all4wins.com/Reviews-page/Roobet/"
+        }
       }
     </script>
-    <!-- End JSON-LD Review for Roobet -->
+    <!-- End JSON-LD Article for Roobet -->
   </head>
   <body>
     <div id="home-background"></div>
