--- a/Reviews-page/Thunderpick/index.html
+++ b/Reviews-page/Thunderpick/index.html
@@ -53,35 +53,37 @@
       }
     </script>
 
-    <!-- JSON-LD Review for Thunderpick -->
+    <!-- JSON-LD Article for Thunderpick -->
     <script type="application/ld+json">
       {
         "@context": "https://schema.org",
-        "@type": "Review",
-        "itemReviewed": {
-          "@type": "Casino",
-          "name": "Thunderpick",
-          "url": "https://www.all4wins.com/Reviews-page/Thunderpick/",
-          "image": "https://www.all4wins.com/img/news-banners/thunderpick-banner.webp",
-          "description": "Thunderpick is a licensed crypto-friendly online casino and sportsbook offering over 6,000 games, including slots, table games, live dealer options, and esports betting. The platform features a generous welcome bonus, weekly promotions, and a rewarding loyalty program.",
-          "brand": {
-            "@type": "Brand",
-            "name": "Thunderpick"
-          }
-        },
+        "@type": "Article",
+        "headline": "Thunderpick Review",
+        "description": "Thunderpick is a licensed crypto-friendly online casino and sportsbook offering over 6,000 games, including slots, table games, live dealer options, and esports betting. The platform features a generous welcome bonus, weekly promotions, and a rewarding loyalty program. This article reviews the platform's features, games, and user experience.",
+        "articleBody": "Thunderpick offers a diverse gaming and betting experience with a vast selection of games and a user-friendly interface. The platform provides various promotions, including a generous welcome bonus and a rewarding loyalty program. While most users report positive experiences, some have expressed concerns about withdrawal times and account verification processes.",
+        "image": "https://www.all4wins.com/img/news-banners/thunderpick-banner.webp",
         "author": {
           "@type": "Person",
           "name": "Andrei"
         },
         "publisher": {
           "@type": "Organization",
-          "@id": "https://www.all4wins.com/#organization"
+          "@id": "https://www.all4wins.com/#organization",
+          "name": "All4Wins",
+          "logo": {
+            "@type": "ImageObject",
+            "url": "https://www.all4wins.com/img/news-banners/thunderpick-banner.webp"
+          }
         },
         "datePublished": "2024-08-13",
-        "reviewBody": "Thunderpick offers a diverse gaming and betting experience with a vast selection of games and a user-friendly interface. The platform provides various promotions, including a generous welcome bonus and a rewarding loyalty program. While most users report positive experiences, some have expressed concerns about withdrawal times and account verification processes."
+        "dateModified": "2024-08-29",
+        "mainEntityOfPage": {
+          "@type": "WebPage",
+          "@id": "https://www.all4wins.com/Reviews-page/Thunderpick/"
+        }
       }
     </script>
-    <!-- End JSON-LD Review for Thunderpick -->
+    <!-- End JSON-LD Article for Thunderpick -->
   </head>
   <body>
     <div id="home-background"></div>
