--- a/News-Articles/Top-Crypto-Casinos/index.html
+++ b/News-Articles/Top-Crypto-Casinos/index.html
@@ -74,8 +74,10 @@
         "dateModified": "2025-08-28",
         "author": {
           "@type": "Person",
-          "name": "Andrei"
+          "name": "Andrei",
+          "url": "https://www.all4wins.com"
         },
+
         "publisher": {
           "@type": "Organization",
           "name": "All4Wins",
