--- a/Reviews-page/Thunderpick/index.html
+++ b/Reviews-page/Thunderpick/index.html
@@ -64,8 +64,10 @@
         "image": "https://www.all4wins.com/img/news-banners/thunderpick-banner.webp",
         "author": {
           "@type": "Person",
-          "name": "Andrei"
+          "name": "Andrei",
+          "url": "https://www.all4wins.com"
         },
+
         "publisher": {
           "@type": "Organization",
           "@id": "https://www.all4wins.com/#organization",
