--- a/Reviews-page/7Bit-Casino/index.html
+++ b/Reviews-page/7Bit-Casino/index.html
@@ -71,8 +71,10 @@
         },
         "author": {
           "@type": "Person",
-          "name": "Andrei"
+          "name": "Andrei",
+          "url": "https://www.all4wins.com"
         },
+
         "publisher": {
           "@type": "Organization",
           "@id": "https://www.all4wins.com/#organization"
