--- a/Reviews-page/GG.Bet/index.html
+++ b/Reviews-page/GG.Bet/index.html
@@ -66,8 +66,10 @@
         "image": "https://www.all4wins.com/img/news-banners/gg.bet-banner.webp",
         "author": {
           "@type": "Person",
-          "name": "Andrei"
+          "name": "Andrei",
+          "url": "https://www.all4wins.com"
         },
+
         "publisher": {
           "@type": "Organization",
           "@id": "https://www.all4wins.com/#organization",
