--- a/Reviews-page/Loot.bet/index.html
+++ b/Reviews-page/Loot.bet/index.html
@@ -62,8 +62,10 @@
         "image": "https://www.all4wins.com/img/news-banners/loot.bet-banner.webp",
         "author": {
           "@type": "Person",
-          "name": "Andrei"
+          "name": "Andrei",
+          "url": "https://www.all4wins.com"
         },
+
         "publisher": {
           "@type": "Organization",
           "@id": "https://www.all4wins.com/#organization",
