--- a/index.html
+++ b/index.html
@@ -55,10 +55,19 @@
             "sameAs": [
               "https://www.instagram.com/all4winss/",
               "https://www.facebook.com/all4winss"
+            ],
+            "contactPoint": [
+              {
+                "@type": "ContactPoint",
+                "contactType": "Customer Service",
+                "areaServed": "Worldwide",
+                "availableLanguage": "English"
+              }
             ]
           },
           {
             "@type": "WebSite",
+            "@id": "https://www.all4wins.com/#website",
             "url": "https://www.all4wins.com/",
             "name": "All4Wins",
             "publisher": {
@@ -77,11 +86,15 @@
             "url": "https://www.all4wins.com/",
             "name": "All4Wins",
             "description": "Discover top casinos, thrilling sports, and esports betting with amazing free spins, free bets, and unbeatable welcome bonuses!",
+            "inLanguage": "en-US",
             "publisher": {
               "@type": "Organization",
               "@id": "https://www.all4wins.com/#organization"
             },
-            "inLanguage": "en-US"
+            "mainEntityOfPage": {
+              "@type": "WebSite",
+              "@id": "https://www.all4wins.com/#website"
+            }
           }
         ]
       }
