--- a/Casinos/index.html
+++ b/Casinos/index.html
@@ -55,7 +55,7 @@
       }
     </script>
 
-    <!-- JSON-LD for Casinos CollectionPage with All4Wins Organization -->
+    <!-- JSON-LD for Casinos CollectionPage with Featured Products -->
     <script type="application/ld+json">
       {
         "@context": "https://schema.org",
@@ -88,72 +88,74 @@
                 {
                   "@type": "ListItem",
                   "position": 1,
-                  "url": "https://www.all4wins.com/Reviews-page/Roobet/"
+                  "url": "https://www.all4wins.com/Reviews-page/Roobet/",
+                  "name": "Roobet"
                 },
                 {
                   "@type": "ListItem",
                   "position": 2,
-                  "url": "https://www.all4wins.com/Reviews-page/BetFury/"
+                  "url": "https://www.all4wins.com/Reviews-page/BetFury/",
+                  "name": "BetFury"
                 },
                 {
                   "@type": "ListItem",
                   "position": 3,
-                  "url": "https://www.all4wins.com/Reviews-page/Wild.io/"
+                  "url": "https://www.all4wins.com/Reviews-page/Wild.io/",
+                  "name": "Wild.io"
                 },
                 {
                   "@type": "ListItem",
                   "position": 4,
-                  "url": "https://www.all4wins.com/Reviews-page/Thunderpick/"
+                  "url": "https://www.all4wins.com/Reviews-page/Thunderpick/",
+                  "name": "Thunderpick"
                 },
                 {
                   "@type": "ListItem",
                   "position": 5,
-                  "url": "https://www.all4wins.com/Reviews-page/GG.Bet/"
+                  "url": "https://www.all4wins.com/Reviews-page/GG.Bet/",
+                  "name": "GG.Bet"
                 },
                 {
                   "@type": "ListItem",
                   "position": 6,
-                  "url": "https://www.all4wins.com/Reviews-page/BC.Games/"
+                  "url": "https://www.all4wins.com/Reviews-page/BC.Games/",
+                  "name": "BC.GAME"
                 },
                 {
                   "@type": "ListItem",
                   "position": 7,
-                  "url": "https://www.all4wins.com/Reviews-page/7Bit-Casino/"
+                  "url": "https://www.all4wins.com/Reviews-page/DuelBits/",
+                  "name": "DuelBits"
                 },
                 {
                   "@type": "ListItem",
                   "position": 8,
-                  "url": "https://www.all4wins.com/Reviews-page/Rabona/"
+                  "url": "https://www.all4wins.com/Reviews-page/Vave/",
+                  "name": "Vave"
                 },
                 {
                   "@type": "ListItem",
                   "position": 9,
-                  "url": "https://www.all4wins.com/Reviews-page/Vave/"
+                  "url": "https://www.all4wins.com/Reviews-page/CloudBet/",
+                  "name": "CloudBet"
                 },
                 {
                   "@type": "ListItem",
                   "position": 10,
-                  "url": "https://www.all4wins.com/Reviews-page/Wazamba/"
+                  "url": "https://www.all4wins.com/Reviews-page/Rabona/",
+                  "name": "Rabona"
                 },
                 {
                   "@type": "ListItem",
                   "position": 11,
-                  "url": "https://www.all4wins.com/Reviews-page/DuelBits/"
+                  "url": "https://www.all4wins.com/Reviews-page/Wazamba/",
+                  "name": "Wazamba"
                 },
                 {
                   "@type": "ListItem",
                   "position": 12,
-                  "url": "https://www.all4wins.com/Reviews-page/Katsubet/"
-                },
-                {
-                  "@type": "ListItem",
-                  "position": 13,
-                  "url": "https://www.all4wins.com/Reviews-page/CloudBet/"
-                },
-                {
-                  "@type": "ListItem",
-                  "position": 14,
-                  "url": "https://www.all4wins.com/Reviews-page/TrustDice/"
+                  "url": "https://www.all4wins.com/Reviews-page/TrustDice/",
+                  "name": "TrustDice"
                 }
               ]
             },
@@ -161,11 +163,50 @@
               "@type": "Organization",
               "@id": "https://www.all4wins.com/#organization"
             }
+          },
+          {
+            "@type": "Product",
+            "name": "Roobet",
+            "image": "https://www.all4wins.com/img/roobet-logo.webp",
+            "description": "Best Rewards System, UFC Brand Ambassadors, Parlay Power Play – $40K in Prizes",
+            "offers": {
+              "@type": "Offer",
+              "url": "https://www.all4wins.com/Reviews-page/Roobet/",
+              "priceCurrency": "USD",
+              "price": "0",
+              "availability": "https://schema.org/InStock"
+            }
+          },
+          {
+            "@type": "Product",
+            "name": "BetFury",
+            "image": "https://www.all4wins.com/img/betfury-logo.webp",
+            "description": "Crypto-Friendly, Comprehensive Stats, Cashback & rakeback up to 50%",
+            "offers": {
+              "@type": "Offer",
+              "url": "https://www.all4wins.com/Reviews-page/BetFury/",
+              "priceCurrency": "USD",
+              "price": "0",
+              "availability": "https://schema.org/InStock"
+            }
+          },
+          {
+            "@type": "Product",
+            "name": "Wild.io",
+            "image": "https://www.all4wins.com/img/wildio-logo.webp",
+            "description": "Best Rewards System, High Betting Limits, First deposit 100% bonus up to $200 in free bets",
+            "offers": {
+              "@type": "Offer",
+              "url": "https://www.all4wins.com/Reviews-page/Wild.io/",
+              "priceCurrency": "USD",
+              "price": "0",
+              "availability": "https://schema.org/InStock"
+            }
           }
         ]
       }
     </script>
-    <!-- End JSON-LD for Casinos CollectionPage -->
+    <!-- End JSON-LD for Casinos CollectionPage with Featured Products -->
   </head>
   <body>
     <div id="Casino-Background"></div>
